--- a/ac/packages/maps/ac_toxic.cfg
+++ b/ac/packages/maps/ac_toxic.cfg
@@ -1,123 +1,79 @@
-// RandumIdiot's AC Maps
-
-// RI_Toxic - Copyright, RandumIdiot 2007.
+// ac_toxic - Copyright, RandumIdiot 2007.
 // This map is very "Hit & Run" like. So, be strategic, and on your best guard.
-
-// If you have questions about anything regarding my maps
-// contact me ath RandumIdiotMaps@gmail.com
-
-// Stuff for ac by me, including maps and guides, available at: http://www.ri-ac.co.nr/
-
-// Comments with "@" just after the comment, are comment's by RandumIdiot
-
 shadowyaw 165
-fog 1024				// @ Next to no fog. Makes everything look much nicer ;)
-mapmodelreset // start @ zero
-
-mapmodel 1 30 0 0 "nothing"		//0 @ Fences have been clipped so you can't
-					//  @ jump on top of them.
-mapmodel 4 1 0 0 "bridge"		//1 @ Adaption of new bridge AND complex bridge are in this map.
-mapmodel 0 0 0 0 "ladder_7x"		//2
-mapmodel 0 0 0 0 "ladder_8x"		//3
-mapmodel 0 0 0 0 "ladder_10x"		//4
-mapmodel 0 0 0 0 "ladder_11x"		//5
-mapmodel 0 0 0 0 "ladder_15x"		//6 
-mapmodel 0 12 0 0 "streetlamp"		//7 @ Streetlamp is now smaller in size. Makes more sense. 
-mapmodel 0 12 0 0 "streetlamp"		//8 @ It also stops people jumping on the top of them easily.
-mapmodel 3 2 0 0 "bench"		//9
-mapmodel 2 4 0 0 "dumpster"		//10
-mapmodel 0 0 0 0 "roadblock01"		//11 use nothing mapmodels to clip
-mapmodel 0 0 0 0 "roadblock02"		//12
-mapmodel 0 0 0 0 "fence"		//13 mind the orientation of fence components (lightning)
-mapmodel 0 0 0 0 "fencepost"		//14 @
-mapmodel 0 0 0 0 "fencegate_open"	//15 @
-mapmodel 0 0 0 0 "fencegate_closed"	//16 @ Custom clipping on all these fence/gates...
-mapmodel 0 0 0 0 "grass01"		//17
-mapmodel 0 0 0 0 "grass01_d"		//18
-mapmodel 0 0 0 0 "grass01_s"		//19
-mapmodel 0 0 0 0 "grass02"		//20
-mapmodel 0 0 0 0 "grass02_d"		//21
-mapmodel 0 0 0 0 "grass02_s"		//22
-mapmodel 0 0 0 0 "plant01"		//23
-mapmodel 0 0 0 0 "plant01_d"		//24
-mapmodel 0 0 0 0 "plant01_s"		//25
-mapmodel 0 0 0 0 "tree01"		//26
-mapmodel 1 2 0 0 "chair1"		//27
-mapmodel 0 0 0 0 "laptop1"		//28
-mapmodel 0 0 0 0 "picture1"		//29 If you wish to put a custom pic in the frame
-					//   use skin_blanco.jpg please make a new folder,
-					//   preferably called picture1_yourmapname. 
-mapmodel 1 30 0 0 "locker"		//30 @ New clipping to avoid people hiding on top of them.
-mapmodel 0 0 0 0 "strahler"		//31
-mapmodel 0 0 0 0 "light01"		//32 
-mapmodel 0 0 0 0 "bulb"			//33
-mapmodel 1  3 0 0 "barrel"		//34
-mapmodel 1  2 0 0 "barrel2"		//35
-mapmodel 0  0 0 0 "elektro"		//36  
-mapmodel 3  1 0 0 "europalette"		//37
-mapmodel 0 0 0 0 "gastank"		//38 use nothing model to clip
-mapmodel 0 0 0 0 "gutter_h"		//39
-mapmodel 0 0 0 0 "gutter_v"		//40 @ Grate is not clipped, so that you don't feel like
-					//   @ you're hitting something, since these are used in windows.
-mapmodel 0 0 0 0 "wrench"		//41
-mapmodel 0 0 0 0 "screw"		//42
-mapmodel 0  0 0 0 "signs/flammable"	//43
-mapmodel 0  0 0 0 "signs/speed"		//44
-mapmodel 0  0 0 0 "signs/maint"		//45
-mapmodel 0  0 0 0 "signs/caution"	//46
-mapmodel 0 0 0 0 "signs/biohazard"	//47 
-mapmodel 0 0 0 0 "fag"			//48
-mapmodel 0 0 0 0 "can"			//49
-mapmodel 0 0 0 0 "can2"			//50
-mapmodel 0 0 0 0 "wood01"		//51
-mapmodel 0 0 0 0 "hook"			//52
-mapmodel 0 0 0 0 "coffeemug"		//53
-mapmodel 0 0 0 0 "flyer"		//54
-mapmodel 0 0 0 0 "poster"		//55 mind z-buffer issues on 16bit!
-mapmodel 1 1 0 0 "aard"			//56 @ Clipped now, so that you go over the box, not through it.
-mapmodel 0 8 0 0 "nothing"		//57 @ Clipping of "0 8 0 0" used for fences/posts/gates.
-mapmodel 4  1 0 0 "comp_bridge"		//58
-mapmodel 1 3 0 0 "toca/wheel"		//59
-mapmodel 2 1 0 0 "toca/tyre"		//60
-mapmodel 1 3 0 0 "toca/trashcan"	//61
-mapmodel 1 2 0 0 "toca/trashbag"	//62
-mapmodel 0 1 0 0 "toca/cinderblock"	//63
-mapmodel 1 3 0 0 "barrel-toxic"		//64
-mapmodel 0 7 0 0 "ladder_7x"		//65
-mapmodel 0 8 0 0 "ladder_8x"		//66
-
-
-
-// skybox for this map - check /packages/skymaps/
-
-//loadsky "textures/skymaps/steini/steini2"
-//loadsky "textures/skymaps/steini/steini3"
-loadsky "textures/skymaps/steini/steini4"
-//loadsky "textures/skymaps/makke/rocky"
-//loadsky "textures/skymaps/makke/mountain"
-
-// used textures in this map - check /packages/textures/
-
-// texture 0 is hardcoded as the sky
-// texture 1 is hardcoded as the default liquid texture
-// texture 2 is the default wall texture (for new maps)
-// texture 3 is the default floor texture
-// texture 4 is the default ceiling texture
-
-texturereset    // starts the texture slot/index at 0
-
-texture 0 "kurt/klite1.jpg" //dummy
-
-//-------------water-uncomment all but one!------
-
-texture 0 "./noctua/water/water01.jpg"
-//texture 0 "./noctua/water/water04.jpg"
-//texture 0 "./noctua/water/water05.jpg"
-//texture 0 "./makke/muddywater.jpg"
-//texture 0 "./noctua/water/snow01.jpg"
-
-//-----brickwalls-------
-
+fog 1024			 
+mapmodelreset  
+mapmodel 1 30 0 0 "nothing"		 
+mapmodel 4 1 0 0 "bridge"		 
+mapmodel 0 0 0 0 "ladder_7x"		 
+mapmodel 0 0 0 0 "ladder_8x"		 
+mapmodel 0 0 0 0 "ladder_10x"		 
+mapmodel 0 0 0 0 "ladder_11x"		 
+mapmodel 0 0 0 0 "ladder_15x"		 
+mapmodel 0 12 0 0 "streetlamp"		 
+mapmodel 0 12 0 0 "streetlamp"		 
+mapmodel 3 2 0 0 "bench"		 
+mapmodel 2 4 0 0 "dumpster"		 
+mapmodel 0 0 0 0 "roadblock01"		 
+mapmodel 0 0 0 0 "roadblock02"		 
+mapmodel 0 0 0 0 "fence"		 
+mapmodel 0 0 0 0 "fencepost"		 
+mapmodel 0 0 0 0 "fencegate_open"	 
+mapmodel 0 0 0 0 "fencegate_closed" 
+mapmodel 0 0 0 0 "grass01"		 
+mapmodel 0 0 0 0 "grass01_d"		 
+mapmodel 0 0 0 0 "grass01_s"		 
+mapmodel 0 0 0 0 "grass02"		 
+mapmodel 0 0 0 0 "grass02_d"		 
+mapmodel 0 0 0 0 "grass02_s"		 
+mapmodel 0 0 0 0 "plant01"		 
+mapmodel 0 0 0 0 "plant01_d"		 
+mapmodel 0 0 0 0 "plant01_s"		 
+mapmodel 0 0 0 0 "tree01"		 
+mapmodel 1 2 0 0 "chair1"		 
+mapmodel 0 0 0 0 "laptop1"		 
+mapmodel 0 0 0 0 "picture1"		 
+mapmodel 1 30 0 0 "locker"		 
+mapmodel 0 0 0 0 "strahler" 
+mapmodel 0 0 0 0 "light01"		 
+mapmodel 0 0 0 0 "bulb"			 
+mapmodel 1 3 0 0 "barrel"		 
+mapmodel 1 2 0 0 "barrel2"		 
+mapmodel 0 0 0 0 "elektro"		 
+mapmodel 3 1 0 0 "europalette"		 
+mapmodel 0 0 0 0 "gastank"		 
+mapmodel 0 0 0 0 "gutter_h"		 
+mapmodel 0 0 0 0 "gutter_v"		 
+mapmodel 0 0 0 0 "wrench"		 
+mapmodel 0 0 0 0 "screw"		 
+mapmodel 0 0 0 0 "signs/flammable"	 
+mapmodel 0 0 0 0 "signs/speed"		 
+mapmodel 0 0 0 0 "signs/maint"		 
+mapmodel 0 0 0 0 "signs/caution"	 
+mapmodel 0 0 0 0 "signs/biohazard"	 
+mapmodel 0 0 0 0 "fag"			 
+mapmodel 0 0 0 0 "can"			 
+mapmodel 0 0 0 0 "can2"			 
+mapmodel 0 0 0 0 "wood01"		 
+mapmodel 0 0 0 0 "hook"			 
+mapmodel 0 0 0 0 "coffeemug"		 
+mapmodel 0 0 0 0 "flyer"		 
+mapmodel 0 0 0 0 "poster"		 
+mapmodel 1 1 0 0 "aard"			 
+mapmodel 0 8 0 0 "nothing"		 
+mapmodel 4 1 0 0 "comp_bridge"		 
+mapmodel 1 3 0 0 "toca/wheel"		 
+mapmodel 2 1 0 0 "toca/tyre"		 
+mapmodel 1 3 0 0 "toca/trashcan"	 
+mapmodel 1 2 0 0 "toca/trashbag"	 
+mapmodel 0 1 0 0 "toca/cinderblock"	 
+mapmodel 1 3 0 0 "barrel-toxic"		 
+mapmodel 0 7 0 0 "ladder_7x"		 
+mapmodel 0 8 0 0 "ladder_8x"		  
+loadsky "textures/skymaps/steini/steini4" 
+texturereset    
+texture 0 "./kurt/klite1.jpg"  
+texture 0 "./makke/black.jpg"
 texture 0 "./arcitool/archibrick01.jpg"
 texture 0 "./arcitool/archibrick02.jpg"
 texture 0 "./arcitool/archibrick03.jpg"
@@ -143,9 +99,6 @@ texture 0 "./makke/mauer1.jpg"
 texture 0 "./makke/mauer2.jpg"
 texture 0 "./makke/d_brick.jpg"
 texture 0 "./mitaman/3dcafe/stone18.jpg"
-
-//---- tiles --------
-
 texture 0 "./noctua/tiles/16tile12.jpg"
 texture 0 "./noctua/tiles/16tile09.jpg"
 texture 0 "./noctua/tiles/16tile10.jpg"
@@ -160,9 +113,6 @@ texture 0 "./arcitool/Cotta2-dunkel.jpg"
 texture 0 "./arcitool/Cotta2-grau.jpg"
 texture 0 "./arcitool/Cotta2-satt.jpg"
 texture 0 "./makke/tiles.jpg"
-
-//------floorings----------------
-
 texture 0 "./noctua/ground/cobbles01.jpg"
 texture 0 "./arcitool/pflaster2.jpg"
 texture 0 "./arcitool/gittersteine2.jpg"
@@ -173,9 +123,6 @@ texture 0 "./makke/c_tile.jpg"
 texture 0 "./makke/pebbles_01.jpg"
 texture 0 "./arcitool/sisal21.jpg"
 texture 0 "./makke/platten.jpg"
-
-//------asphalt/concrete------------------------
-
 texture 0 "./noctua/ground/asph01.jpg"
 texture 0 "./noctua/ground/asph02.jpg"
 texture 0 "./noctua/ground/asph03.jpg"
@@ -198,9 +145,6 @@ texture 0 "./noctua/wall/conc01.jpg"
 texture 0 "./noctua/wall/conc02.jpg"
 texture 0 "./noctua/wall/conc05.jpg"
 texture 0 "./noctua/wall/wall02.jpg"
-
-//-----wall/ceiling/plaster------
-
 texture 0 "./arcitool/sichtbeton1.jpg"
 texture 0 "./arcitool/sichtbeton2.jpg"
 texture 0 "./noctua/ground/snowy02.jpg"
@@ -211,9 +155,6 @@ texture 0 "./noctua/wall/plast03.jpg"
 texture 0 "./noctua/wall/plast04.jpg"
 texture 0 "./mitaman/various/5sqtunnelroad.jpg"
 texture 0 "./makke/smallsteelbox.jpg"
-
-//---------metal----------
-
 texture 0 "./boeck/metal_019.jpg"
 texture 0 "./boeck/metal_019_b.jpg"
 texture 0 "./mitaman/various/036metal.jpg"
@@ -240,9 +181,6 @@ texture 0 "./noctua/metal/verdig01.jpg"
 texture 0 "./noctua/metal/brass01.jpg"
 texture 0 "./mitaman/various/006metal.jpg"
 texture 0 "./mitaman/various/metal020.jpg"
-
-//-------wood---------------------
-
 texture 0 "./boeck/wood_009.jpg"
 texture 0 "./boeck/wood_010.jpg"
 texture 0 "./boeck/wood_017.jpg"
@@ -265,11 +203,8 @@ texture 0 "./noctua/wood/wood02.jpg"
 texture 0 "./noctua/wood/wood03.jpg"
 texture 0 "./noctua/wood/wood04.jpg"
 texture 0 "./mitaman/various/063bois.jpg"
-texture 0 "./mitaman/various/063bois_b.jpg" //40
-
-//-----mud/grass/sand----------
-
-texture 0 "./craig_fortune/terrain/grass_lush1.jpg" //41
+texture 0 "./mitaman/various/063bois_b.jpg" 
+texture 0 "./craig_fortune/terrain/grass_lush1.jpg"  
 texture 0 "./craig_fortune/terrain/Grass_mossy.jpg"
 texture 0 "./craig_fortune/terrain/Grass_parched.jpg"
 texture 0 "./arcitool/Wiese3.jpg"
@@ -288,20 +223,17 @@ texture 0 "./DigitalFlux/reddish_brown_dirt_02.jpg"
 texture 0 "./makke/dirt_01.jpg"
 texture 0 "./makke/stuck1.jpg"
 texture 0 "./noctua/ground/mud01.jpg"
-texture 0 "./noctua/ground/pebble01.jpg" //60
+texture 0 "./noctua/ground/pebble01.jpg"  
 texture 0 "./noctua/ground/ground02.jpg"
-texture 0 "./noctua/ground/ground06.jpg" //62
-
-//-----rock/stone----------------
-
-texture 0 "./arcitool/schotter1.jpg" //63
+texture 0 "./noctua/ground/ground06.jpg"   
+texture 0 "./arcitool/schotter1.jpg"  
 texture 0 "./arcitool/schotter2.jpg"
 texture 0 "./craig_fortune/terrain/Rock_cracked.jpg"
 texture 0 "./craig_fortune/terrain/rubble.jpg"
 texture 0 "./craig_fortune/terrain/Rock_rubble.jpg"
 texture 0 "./noctua/ground/snowy01.jpg"
 texture 0 "./makke/rock.jpg"
-texture 0 "./noctua/stone/stone18.jpg" //70
+texture 0 "./noctua/stone/stone18.jpg"  
 texture 0 "./noctua/stone/stone02.jpg"
 texture 0 "./noctua/stone/stone03.jpg"
 texture 0 "./noctua/stone/stone04.jpg"
@@ -311,7 +243,7 @@ texture 0 "./noctua/stone/stone07.jpg"
 texture 0 "./noctua/stone/stone08.jpg"
 texture 0 "./noctua/stone/stone09.jpg"
 texture 0 "./noctua/stone/stone12.jpg"
-texture 0 "./noctua/stone/stone13.jpg" //80
+texture 0 "./noctua/stone/stone13.jpg"  
 texture 0 "./noctua/stone/stone15.jpg"
 texture 0 "./noctua/stone/stone16.jpg"
 texture 0 "./noctua/stone/stone17.jpg"
@@ -319,25 +251,19 @@ texture 0 "./noctua/stone/marmor01.jpg"
 texture 0 "./noctua/stone/stone19.jpg"
 texture 0 "./noctua/wall/conc03.jpg"
 texture 0 "./noctua/wall/conc04.jpg"
-texture 0 "./noctua/wall/d_wall01.jpg" //88
-
-//-------------carpet---------------
-
-texture 0 "./noctua/textile/carpet04.jpg"  /89
-texture 0 "./noctua/textile/carpet01.jpg" //90
+texture 0 "./noctua/wall/d_wall01.jpg"   
+texture 0 "./noctua/textile/carpet04.jpg"   
+texture 0 "./noctua/textile/carpet01.jpg"  
 texture 0 "./noctua/textile/carpet02.jpg"
 texture 0 "./noctua/textile/carpet03.jpg"
 texture 0 "./noctua/textile/burlap01.jpg"
-texture 0 "./noctua/textile/carpet05.jpg" //94
-
-//-------------trim------------------
-
-texture 0 "./arcitool/Wellblech1-1.jpg"  //95
+texture 0 "./noctua/textile/carpet05.jpg"   
+texture 0 "./arcitool/Wellblech1-1.jpg"   
 texture 0 "./arcitool/Glasbausteine.jpg"
 texture 0 "./boeck/gully.jpg"
 texture 0 "./boeck/aircon2.jpg"
 texture 0 "./makke/aircon.jpg"
-texture 0 "./makke/aircon_sm.jpg"     //100
+texture 0 "./makke/aircon_sm.jpg"      
 texture 0 "./makke/door.jpg"
 texture 0 "./makke/klappe.jpg"
 texture 0 "./makke/klappe2.jpg"
@@ -375,10 +301,7 @@ texture 0 "./mitaman/zastrow/sub_doors512B05.jpg"
 texture 0 "./mitaman/zastrow/sub_doors512A10.jpg"
 texture 0 "./mitaman/zastrow/sub_doors512A16.jpg"
 texture 0 "./mitaman/various/sub_doors256nf_01.jpg"
-texture 0 "./mitaman/3dcafe/objects08.jpg"
-
-//------crates----------
-
+texture 0 "./mitaman/3dcafe/objects08.jpg" 
 texture 0 "./craig_fortune/crates/light_weathered.jpg"
 texture 0 "./craig_fortune/crates/light.jpg"
 texture 0 "./zastrow/3wood_crate_03.jpg"
@@ -395,8 +318,5 @@ texture 0 "./zastrow/wood_crate_10.jpg"
 texture 0 "./zastrow/wood_crate_12.jpg"
 texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
-texture 0 "./makke/box_3.jpg"           //241
-
-
-//wotwots urban textures
-texture 0 "wotwot/urban/manhole1.jpg"  
+texture 0 "./makke/box_3.jpg"       
+texture 0 "./wotwot/urban/manhole1.jpg"  
