--- a/ac/packages/maps/ac_desert.cfg
+++ b/ac/packages/maps/ac_desert.cfg
@@ -1,95 +1,62 @@
-mapmodelreset // start @ zero
+mapmodelreset
 fogcolour 0x9F8255
 fog 300
 shadowyaw 175
-
-mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
-//                                     models that can´t be clipped properly otherwise
 mapmodel 0 0 0 0 "nothing"
 mapmodel 0 0 0 0 "nothing"
 mapmodel 0 0 0 0 "nothing"
-mapmodel 3  1 0 0 "comp_bridge"    //4
-mapmodel 0 7 0 0 "ladder_7x"       //5
-mapmodel 0 8 0 0 "ladder_8x"       //6
-mapmodel 0 10 0 0 "ladder_10x"     //7
-mapmodel 0 11 0 0 "ladder_11x"     //8
-mapmodel 0 15 0 0 "ladderx15_center3"//9 
-mapmodel 0 12 0 0 "streetlamp"     //10
-mapmodel 0 12 0 0 "streetlamp"     //11
-mapmodel 3 2 0 0 "bench"          //12
-mapmodel 0 0 0 0 "flyer"           //13
-mapmodel 0 0 0 0 "roadblock01"     //14 use nothing mapmodels to clip
-mapmodel 0 0 0 0 "roadblock02"     //15
-mapmodel 1 8 0 0 "fence"           //16 mind the orientation of fence components (lightning)
-mapmodel 1 8 0 0 "fencepost"       //17  
-mapmodel 1 8 0 0 "fencegate_open"  //18
-mapmodel 1 8 0 0 "fencegate_closed"//19
-mapmodel 0 0 0 0 "grass01_d"       //20
-mapmodel 0 0 0 0 "grass02_d"       //21
-mapmodel 0 0 0 0 "plant01_d"       //22
-mapmodel 0 0 3 0 "poster"          //23
-mapmodel 1 2 0 0 "chair1"          //24
-mapmodel 0 0 0 0 "laptop1"         //25
-mapmodel 0 0 0 0 "picture1"        //26 If you wish to put a custom pic in the frame
-//                                      use skin_blanco.jpg
-//                                      please make a new folder,
-//                                      preferably called picture1_yourmapname. 
-mapmodel 1 6 0 0 "locker"          //27
-mapmodel 0 0 0 0 "strahler"        //28
-mapmodel 0 0 0 0 "light01"         //29 
-mapmodel 0 0 0 0 "bulb"            //30
-mapmodel 1  3 0 0 "barrel"         //31
-mapmodel 1  2 0 0 "barrel2"        //32
-mapmodel 0  0 0 0 "sail"           //33  
-mapmodel 3  1 0 0 "europalette"    //34
-mapmodel 0 0 0 0 "gastank"         //35 use nothing model to clip
-mapmodel 2 1 0 0 "gutter_h"        //36
-mapmodel 1 2 0 0 "gutter_v"        //37
-mapmodel 0 0 0 0 "wrench"          //38
-mapmodel 0 0 0 0 "screw"           //39
-mapmodel 0  0 0 0 "signs/flammable"//40
-mapmodel 0  0 0 0 "signs/arab"     //41
-mapmodel 0  0 0 0 "signs/maint"    //42
-mapmodel 0  0 0 0 "signs/caution"  //43
-mapmodel 0 0 0 0 "signs/biohazard" //44 
-mapmodel 0 0 0 0 "fag"             //45
-mapmodel 0 0 0 0 "can"             //46
-mapmodel 0 0 0 0 "can2"            //47
-mapmodel 0 0 0 0 "wood01"          //48
-mapmodel 0 0 0 0 "hook"            //49
-mapmodel 0 0 0 0 "coffeemug"       //50
-
-// skybox for this map - check /packages/skymaps/
-
-//loadsky "textures/skymaps/steini/steini2"
-//loadsky "textures/skymaps/steini/steini3"
-//loadsky "textures/skymaps/steini/steini4"
-//loadsky "textures/skymaps/makke/rocky"
-//loadsky "textures/skymaps/makke/mountain"
+mapmodel 0 0 0 0 "nothing"
+mapmodel 3 1 0 0 "comp_bridge"
+mapmodel 0 7 0 0 "ladder_7x"
+mapmodel 0 8 0 0 "ladder_8x"
+mapmodel 0 10 0 0 "ladder_10x"
+mapmodel 0 11 0 0 "ladder_11x"
+mapmodel 0 15 0 0 "ladderx15_center3"
+mapmodel 0 12 0 0 "streetlamp"
+mapmodel 0 12 0 0 "streetlamp"
+mapmodel 3 2 0 0 "bench"
+mapmodel 0 0 0 0 "flyer"
+mapmodel 0 0 0 0 "roadblock01"
+mapmodel 0 0 0 0 "roadblock02"
+mapmodel 1 8 0 0 "fence"
+mapmodel 1 8 0 0 "fencepost"
+mapmodel 1 8 0 0 "fencegate_open"
+mapmodel 1 8 0 0 "fencegate_closed"
+mapmodel 0 0 0 0 "grass01_d"
+mapmodel 0 0 0 0 "grass02_d"
+mapmodel 0 0 0 0 "plant01_d"
+mapmodel 0 0 3 0 "poster"
+mapmodel 1 2 0 0 "chair1"
+mapmodel 0 0 0 0 "laptop1"
+mapmodel 0 0 0 0 "picture1"
+mapmodel 1 6 0 0 "locker"
+mapmodel 0 0 0 0 "strahler"
+mapmodel 0 0 0 0 "light01"
+mapmodel 0 0 0 0 "bulb"
+mapmodel 1 3 0 0 "barrel"
+mapmodel 1 2 0 0 "barrel2"
+mapmodel 0 0 0 0 "sail"
+mapmodel 3 1 0 0 "europalette"
+mapmodel 0 0 0 0 "gastank"
+mapmodel 2 1 0 0 "gutter_h"
+mapmodel 1 2 0 0 "gutter_v"
+mapmodel 0 0 0 0 "wrench"
+mapmodel 0 0 0 0 "screw"
+mapmodel 0 0 0 0 "signs/flammable"
+mapmodel 0 0 0 0 "signs/arab"
+mapmodel 0 0 0 0 "signs/maint"
+mapmodel 0 0 0 0 "signs/caution"
+mapmodel 0 0 0 0 "signs/biohazard"
+mapmodel 0 0 0 0 "fag"
+mapmodel 0 0 0 0 "can"
+mapmodel 0 0 0 0 "can2"
+mapmodel 0 0 0 0 "wood01"
+mapmodel 0 0 0 0 "hook"
+mapmodel 0 0 0 0 "coffeemug"
 loadsky "textures/skymaps/makke/sand"
-
-// used textures in this map - check /packages/textures/
-
-// texture 0 is hardcoded as the sky
-// texture 1 is hardcoded as the default liquid texture
-// texture 2 is the default wall texture (for new maps)
-// texture 3 is the default floor texture
-// texture 4 is the default ceiling texture
-
-texturereset    // starts the texture slot/index at 0
-
-texture 0 "kurt/klite1.jpg" //damn dummy
-
-//-------------water-uncomment all but one!------
-
-texture 0 "./noctua/water/water01.jpg"
-//texture 0 "./noctua/water/water04.jpg"
-//texture 0 "./noctua/water/water05.jpg"
-//texture 0 "./makke/muddywater.jpg"
-//texture 0 "./noctua/water/snow01.jpg"
-
-//-----brickwalls-------
-
+texturereset
+texture 0 "./kurt/klite1.jpg"
+texture 0 "./makke/black.jpg"
 texture 0 "./arcitool/archibrick01.jpg"
 texture 0 "./arcitool/archibrick02.jpg"
 texture 0 "./arcitool/archibrick03.jpg"
@@ -114,9 +81,6 @@ texture 0 "./makke/01-CMU.jpg"
 texture 0 "./makke/mauer1.jpg"
 texture 0 "./makke/mauer2.jpg"
 texture 0 "./mitaman/3dcafe/stone18.jpg"
-
-//---- tiles --------
-
 texture 0 "./noctua/tiles/16tile12.jpg"
 texture 0 "./noctua/tiles/16tile09.jpg"
 texture 0 "./noctua/tiles/16tile10.jpg"
@@ -130,9 +94,6 @@ texture 0 "./arcitool/Cotta2-beige.jpg"
 texture 0 "./arcitool/Cotta2-dunkel.jpg"
 texture 0 "./arcitool/Cotta2-grau.jpg"
 texture 0 "./arcitool/Cotta2-satt.jpg"
-
-//------floorings----------------
-
 texture 0 "./noctua/ground/cobbles01.jpg"
 texture 0 "./arcitool/pflaster2.jpg"
 texture 0 "./arcitool/gittersteine2.jpg"
@@ -142,9 +103,6 @@ texture 0 "./makke/br_tiles.jpg"
 texture 0 "./makke/c_tile.jpg"
 texture 0 "./makke/pebbles_01.jpg"
 texture 0 "./arcitool/sisal21.jpg"
-
-//------asphalt/concrete------------------------
-
 texture 0 "./noctua/ground/asph01.jpg"
 texture 0 "./noctua/ground/asph02.jpg"
 texture 0 "./noctua/ground/asph03.jpg"
@@ -167,9 +125,6 @@ texture 0 "./noctua/wall/conc01.jpg"
 texture 0 "./noctua/wall/conc02.jpg"
 texture 0 "./noctua/wall/conc05.jpg"
 texture 0 "./noctua/wall/wall02.jpg"
-
-//-----wall/ceiling/plaster------
-
 texture 0 "./arcitool/sichtbeton1.jpg"
 texture 0 "./arcitool/sichtbeton2.jpg"
 texture 0 "./noctua/ground/snowy02.jpg"
@@ -180,9 +135,6 @@ texture 0 "./noctua/wall/plast03.jpg"
 texture 0 "./noctua/wall/plast04.jpg"
 texture 0 "./mitaman/various/5sqtunnelroad.jpg"
 texture 0 "./mitaman/various/027metal.jpg"
-
-//---------metal----------
-
 texture 0 "./boeck/metal_019.jpg"
 texture 0 "./boeck/metal_019_b.jpg"
 texture 0 "./mitaman/various/036metal.jpg"
@@ -209,9 +161,6 @@ texture 0 "./noctua/metal/verdig01.jpg"
 texture 0 "./noctua/metal/brass01.jpg"
 texture 0 "./mitaman/various/006metal.jpg"
 texture 0 "./mitaman/various/metal020.jpg"
-
-//-------wood---------------------
-
 texture 0 "./boeck/wood_009.jpg"
 texture 0 "./boeck/wood_010.jpg"
 texture 0 "./boeck/wood_017.jpg"
@@ -236,9 +185,6 @@ texture 0 "./noctua/wood/wood03.jpg"
 texture 0 "./noctua/wood/wood04.jpg"
 texture 0 "./mitaman/various/063bois.jpg"
 texture 0 "./mitaman/various/063bois_b.jpg"
-
-//-----mud/grass/sand----------
-
 texture 0 "./craig_fortune/terrain/grass_lush1.jpg"
 texture 0 "./craig_fortune/terrain/Grass_mossy.jpg"
 texture 0 "./craig_fortune/terrain/Grass_parched.jpg"
@@ -261,9 +207,6 @@ texture 0 "./noctua/ground/mud01.jpg"
 texture 0 "./noctua/ground/pebble01.jpg"
 texture 0 "./noctua/ground/ground02.jpg"
 texture 0 "./noctua/ground/ground06.jpg"
-
-//-----rock/stone----------------
-
 texture 0 "./arcitool/schotter1.jpg"
 texture 0 "./arcitool/schotter2.jpg"
 texture 0 "./craig_fortune/terrain/Rock_cracked.jpg"
@@ -290,24 +233,18 @@ texture 0 "./noctua/stone/stone19.jpg"
 texture 0 "./noctua/wall/conc03.jpg"
 texture 0 "./noctua/wall/conc04.jpg"
 texture 0 "./noctua/wall/d_wall01.jpg"
-
-//-------------carpet---------------
-
 texture 0 "./noctua/textile/carpet04.jpg"
 texture 0 "./noctua/textile/carpet01.jpg"
 texture 0 "./noctua/textile/carpet02.jpg"
 texture 0 "./noctua/textile/carpet03.jpg"
 texture 0 "./noctua/textile/burlap01.jpg"
 texture 0 "./noctua/textile/carpet05.jpg"
-
-//-------------trim------------------
-
 texture 0 "./arcitool/Wellblech1-1.jpg"
 texture 0 "./arcitool/Glasbausteine.jpg"
 texture 0 "./boeck/gully.jpg"
 texture 0 "./boeck/aircon2.jpg"
 texture 0 "./makke/aircon.jpg"
-texture 0 "./makke/aircon_sm.jpg"     //100
+texture 0 "./makke/aircon_sm.jpg"
 texture 0 "./makke/door.jpg"
 texture 0 "./makke/klappe.jpg"
 texture 0 "./makke/klappe2.jpg"
@@ -334,7 +271,7 @@ texture 0 "./makke/metalstair1.jpg"
 texture 0 "./makke/metalstair2.jpg"
 texture 0 "./mitaman/zastrow/metal_siding_kinksb.jpg"
 texture 0 "./makke/window.jpg"
-texture 0 "./makke/windows.jpg"     
+texture 0 "./makke/windows.jpg"
 texture 0 "./mitaman/zastrow/sub_window31.jpg"
 texture 0 "./mitaman/zastrow/sub_window33.jpg"
 texture 0 "./mitaman/various/sub_window23.jpg"
@@ -348,9 +285,6 @@ texture 0 "./mitaman/zastrow/sub_doors512A10.jpg"
 texture 0 "./mitaman/zastrow/sub_doors512A16.jpg"
 texture 0 "./mitaman/various/sub_doors256nf_01.jpg"
 texture 0 "./mitaman/3dcafe/objects08.jpg"
-
-//------crates----------
-
 texture 0 "./craig_fortune/crates/light_weathered.jpg"
 texture 0 "./craig_fortune/crates/light.jpg"
 texture 0 "./zastrow/3wood_crate_03.jpg"
@@ -367,4 +301,4 @@ texture 0 "./zastrow/wood_crate_10.jpg"
 texture 0 "./zastrow/wood_crate_12.jpg"
 texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
-texture 0 "./makke/box_3.jpg"           //241
+texture 0 "./makke/box_3.jpg"
