--- a/ac/packages/maps/ac_power.cfg
+++ b/ac/packages/maps/ac_power.cfg
@@ -1,132 +1,84 @@
 //Power Station by wotwot, edited by makkE
 //Custom textures by wotwot and makkE
 //Custom mapmodels by makkE and Toca
-
-
 fogcolour 0
 shadowyaw 180
-
-// *IMPORTANT NOTE FOR AC-MAPPERS*
-// BE SURE TO COPY THIS FILE AND MAKE IT YOUR MAP CONFIG
-// BEFORE(!!) YOU EDIT ANYTHING.
-// THEN START AC, GO EDIT-MODE,GO /NEWMAP
-// then SAVE YOUR MAP (AS YOURCONFIGNAME.CGZ) AND RELOAD IT!
-// OTHERWISE YOU WILL USE THE START MAPS SETTINGS WHICH ARE
-// DIFFRENT SO UPON 2ND LOAD YOUR MAP
-// WOULD BE SCREWED UP...
-
-mapmodelreset // start @ zero
-
-mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
-//                                     models that can´t be clipped properly otherwise
-
-mapmodel 4 1 0 0 "bridge"    //1
-mapmodel 0 7 0 0 "ladder_7x"       //2
-mapmodel 0 8 0 0 "ladder_8x"       //3
-mapmodel 0 10 0 0 "ladder_10x"     //4
-mapmodel 0 11 0 0 "ladder_11x"     //5
-mapmodel 0 15 0 0 "ladder_15x"     //6 
-mapmodel 1 12 0 0 "streetlamp"     //7
-mapmodel 1 12 0 0 "streetlamp"     //8
-mapmodel 3  2 0 0 "bench"          //9
-mapmodel 2 4 0 0 "dumpster"        //10
-mapmodel 0 0 0 0 "roadblock01"     //11 use nothing mapmodels to clip
-mapmodel 0 0 0 0 "roadblock02"     //12
-mapmodel 1 8 0 0 "fence"           //13 mind the orientation of fence components (lightning)
-mapmodel 1 8 0 0 "fencepost"       //14  
-mapmodel 1 8 0 0 "fencegate_open"  //15
-mapmodel 1 8 0 0 "fencegate_closed"//16
-mapmodel 0 0 0 0 "grass01"         //17
-mapmodel 0 0 0 0 "grass01_d"       //18
-mapmodel 0 0 0 0 "grass01_s"       //19
-mapmodel 0 0 0 0 "grass02"         //20
-mapmodel 0 0 0 0 "grass02_d"       //21
-mapmodel 0 0 0 0 "grass02_s"       //22
-mapmodel 0 0 0 0 "plant01"         //23
-mapmodel 0 0 0 0 "plant01_d"       //24
-mapmodel 0 0 0 0 "plant01_s"       //25
-mapmodel 1 7 0 0 "tree01"          //26
-mapmodel 1 2 0 0 "chair1"          //27
-mapmodel 0 0 0 0 "laptop1"         //28
-mapmodel 0 0 0 0 "picture1"        //29 If you wish to put a custom pic in the frame
-//                                      use skin_blanco.jpg
-//                                      please make a new folder,
-//                                      preferably called picture1_yourmapname. 
-mapmodel 1 6 0 0 "locker"          //30
-mapmodel 0 0 0 0 "strahler"        //31
-mapmodel 0 0 0 0 "light01"         //32 
-mapmodel 0 0 0 0 "bulb"            //33
-mapmodel 1  3 0 0 "barrel"         //34
-mapmodel 1  2 0 0 "barrel2"        //35
-mapmodel 0  0 0 0 "elektro"        //36  
-mapmodel 3  1 0 0 "europalette"    //37
-mapmodel 0 0 0 0 "gastank"         //38 use nothing model to clip
-mapmodel 2 1 0 0 "gutter_h"        //39
-mapmodel 1 2 0 0 "gutter_v"        //40
-mapmodel 0 0 0 0 "wrench"          //41
-mapmodel 0 0 0 0 "screw"           //42
-mapmodel 0  0 0 0 "signs/flammable"//43
-mapmodel 0  0 0 0 "signs/speed"    //44
-mapmodel 0  0 0 0 "signs/maint"    //45
-mapmodel 0  0 0 0 "signs/caution"  //46
-mapmodel 0 0 0 0 "signs/biohazard" //47 
-mapmodel 0 0 0 0 "fag"             //48
-mapmodel 0 0 0 0 "can"             //49
-mapmodel 0 0 0 0 "can2"            //50
-mapmodel 0 0 0 0 "wood01"          //51
-mapmodel 0 0 0 0 "hook"            //52
-mapmodel 0 0 0 0 "coffeemug"       //53
-mapmodel 0 0 0 0 "flyer"           //54
-mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
-mapmodel 0 0 0 0 "aard"            //56
-mapmodel 0 0 0 0 "wires/3x8"       //57
-mapmodel 0 0 0 0 "wires/2x8"       //58
-mapmodel 0 0 0 0 "wires/4x8a"      //59
-mapmodel 0 0 0 0 "wires/4x8"       //60
-mapmodel 0 8 0 0 "drainpipe"       //61
-mapmodel 1 8 0 0 "nothing"	     //62
-
-//Tocas mapmodels
-
-mapmodel 1 7 0 0 "toca/commrack"		//63
-mapmodel 1 3 0 0 "toca/commrack2"		//64
-mapmodel 0 0 0 0 "toca/monitor"		//65
-mapmodel 1 2 0 0 "toca/trashbag"		//66
-mapmodel 1 1 0 0 "toca/milkcarton"		//67
-mapmodel 1 7 0 0 "toca/commrack"		//68
-mapmodel 1 4 0 0 "toca/guardrail2"		//69
-mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	//70
-
-// skybox for this map - check /packages/skymaps/
-
-//loadsky "textures/skymaps/steini/steini2"
-//loadsky "textures/skymaps/steini/steini3"
+mapmodelreset
+mapmodel 0 0 0 0 "nothing"
+mapmodel 4 1 0 0 "bridge"
+mapmodel 0 7 0 0 "ladder_7x"
+mapmodel 0 8 0 0 "ladder_8x"
+mapmodel 0 10 0 0 "ladder_10x"
+mapmodel 0 11 0 0 "ladder_11x"
+mapmodel 0 15 0 0 "ladder_15x"
+mapmodel 1 12 0 0 "streetlamp"
+mapmodel 1 12 0 0 "streetlamp"
+mapmodel 3 2 0 0 "bench"
+mapmodel 2 4 0 0 "dumpster"
+mapmodel 0 0 0 0 "roadblock01"
+mapmodel 0 0 0 0 "roadblock02"
+mapmodel 1 8 0 0 "fence"
+mapmodel 1 8 0 0 "fencepost"
+mapmodel 1 8 0 0 "fencegate_open"
+mapmodel 1 8 0 0 "fencegate_closed"
+mapmodel 0 0 0 0 "grass01"
+mapmodel 0 0 0 0 "grass01_d"
+mapmodel 0 0 0 0 "grass01_s"
+mapmodel 0 0 0 0 "grass02"
+mapmodel 0 0 0 0 "grass02_d"
+mapmodel 0 0 0 0 "grass02_s"
+mapmodel 0 0 0 0 "plant01"
+mapmodel 0 0 0 0 "plant01_d"
+mapmodel 0 0 0 0 "plant01_s"
+mapmodel 1 7 0 0 "tree01"
+mapmodel 1 2 0 0 "chair1"
+mapmodel 0 0 0 0 "laptop1"
+mapmodel 0 0 0 0 "picture1"
+mapmodel 1 6 0 0 "locker"
+mapmodel 0 0 0 0 "strahler"
+mapmodel 0 0 0 0 "light01"
+mapmodel 0 0 0 0 "bulb"
+mapmodel 1 3 0 0 "barrel"
+mapmodel 1 2 0 0 "barrel2"
+mapmodel 0 0 0 0 "elektro"
+mapmodel 3 1 0 0 "europalette"
+mapmodel 0 0 0 0 "gastank"
+mapmodel 2 1 0 0 "gutter_h"
+mapmodel 1 2 0 0 "gutter_v"
+mapmodel 0 0 0 0 "wrench"
+mapmodel 0 0 0 0 "screw"
+mapmodel 0 0 0 0 "signs/flammable"
+mapmodel 0 0 0 0 "signs/speed"
+mapmodel 0 0 0 0 "signs/maint"
+mapmodel 0 0 0 0 "signs/caution"
+mapmodel 0 0 0 0 "signs/biohazard"
+mapmodel 0 0 0 0 "fag"
+mapmodel 0 0 0 0 "can"
+mapmodel 0 0 0 0 "can2"
+mapmodel 0 0 0 0 "wood01"
+mapmodel 0 0 0 0 "hook"
+mapmodel 0 0 0 0 "coffeemug"
+mapmodel 0 0 0 0 "flyer"
+mapmodel 0 0 0 0 "poster"
+mapmodel 0 0 0 0 "aard"
+mapmodel 0 0 0 0 "wires/3x8"
+mapmodel 0 0 0 0 "wires/2x8"
+mapmodel 0 0 0 0 "wires/4x8a"
+mapmodel 0 0 0 0 "wires/4x8"
+mapmodel 0 8 0 0 "drainpipe"
+mapmodel 1 8 0 0 "nothing"	
+mapmodel 1 7 0 0 "toca/commrack"		
+mapmodel 1 3 0 0 "toca/commrack2"		
+mapmodel 0 0 0 0 "toca/monitor"		
+mapmodel 1 2 0 0 "toca/trashbag"		
+mapmodel 1 1 0 0 "toca/milkcarton"		
+mapmodel 1 7 0 0 "toca/commrack"		
+mapmodel 1 4 0 0 "toca/guardrail2"		
+mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	
 loadsky "textures/skymaps/steini/steini4"
-//loadsky "textures/skymaps/makke/rocky"
-//loadsky "textures/skymaps/makke/mountain"
-
-// used textures in this map - check /packages/textures/
-
-// texture 0 is hardcoded as the sky
-// texture 1 is hardcoded as the default liquid texture
-// texture 2 is the default wall texture (for new maps)
-// texture 3 is the default floor texture
-// texture 4 is the default ceiling texture
-
-texturereset    // starts the texture slot/index at 0
-
-texture 0 "kurt/klite1.jpg" //dummy
-
-//-------------water-uncomment all but one!------
-
-texture 0 "./noctua/water/water01.jpg"
-//texture 0 "./noctua/water/water04.jpg"
-//texture 0 "./noctua/water/water05.jpg"
-//texture 0 "./makke/muddywater.jpg"
-//texture 0 "./noctua/water/snow01.jpg"
-
-//-----brickwalls-------
-
+texturereset
+texture 0 "./kurt/klite1.jpg"
+texture 0 "./makke/black.jpg"
 texture 0 "./arcitool/archibrick01.jpg"
 texture 0 "./arcitool/archibrick02.jpg"
 texture 0 "./arcitool/archibrick03.jpg"
@@ -134,7 +86,7 @@ texture 0 "./arcitool/archibrick04.jpg"
 texture 0 "./arcitool/archibrick05.jpg"
 texture 0 "./arcitool/archibrick06.jpg"
 texture 0 "./arcitool/archibrick07.jpg"
-texture 0 "./arcitool/rohbaubims.jpg"	//10
+texture 0 "./arcitool/rohbaubims.jpg"	
 texture 0 "./mitaman/grsites/brick051.jpg"
 texture 0 "./mitaman/grsites/brick065.jpg"
 texture 0 "./boeck/stone_022.jpg"
@@ -144,7 +96,7 @@ texture 0 "./makke/bricks_2.jpg"
 texture 0 "./makke/bricks_3.jpg"
 texture 0 "./makke/brickwall.jpg"
 texture 0 "./noctua/wall/brick02.jpg"
-texture 0 "./sub/brick_wall_08.jpg"		//20
+texture 0 "./sub/brick_wall_08.jpg"		
 texture 0 "./sub/brick_wall_09.jpg"
 texture 0 "./makke/bricky.jpg"
 texture 0 "./makke/01-CMU.jpg"
@@ -152,13 +104,10 @@ texture 0 "./makke/mauer1.jpg"
 texture 0 "./makke/mauer2.jpg"
 texture 0 "./makke/d_brick.jpg"
 texture 0 "./mitaman/3dcafe/stone18.jpg"
-
-//---- tiles --------
-
 texture 0 "./noctua/tiles/16tile12.jpg"
 texture 0 "./noctua/tiles/16tile09.jpg"
 texture 0 "./noctua/tiles/16tile10.jpg"
-texture 0 "./noctua/tiles/16tile11.jpg"	//30
+texture 0 "./noctua/tiles/16tile11.jpg"	
 texture 0 "./noctua/tiles/16tile07.jpg"
 texture 0 "./arcitool/Cotta1-grau.jpg"
 texture 0 "./arcitool/Cotta1-graubraun.jpg"
@@ -168,10 +117,7 @@ texture 0 "./arcitool/Cotta2-beige.jpg"
 texture 0 "./arcitool/Cotta2-dunkel.jpg"
 texture 0 "./arcitool/Cotta2-grau.jpg"
 texture 0 "./arcitool/Cotta2-satt.jpg"
-texture 0 "./makke/tiles.jpg"			//40
-
-//------floorings----------------
-
+texture 0 "./makke/tiles.jpg"			
 texture 0 "./noctua/ground/cobbles01.jpg"
 texture 0 "./arcitool/pflaster2.jpg"
 texture 0 "./arcitool/gittersteine2.jpg"
@@ -181,10 +127,7 @@ texture 0 "./makke/br_tiles.jpg"
 texture 0 "./makke/c_tile.jpg"
 texture 0 "./makke/pebbles_01.jpg"
 texture 0 "./arcitool/sisal21.jpg"
-texture 0 "./makke/platten.jpg"		//50
-
-//------asphalt/concrete------------------------
-
+texture 0 "./makke/platten.jpg"		
 texture 0 "./noctua/ground/asph01.jpg"
 texture 0 "./noctua/ground/asph02.jpg"
 texture 0 "./noctua/ground/asph03.jpg"
@@ -193,7 +136,7 @@ texture 0 "./DigitalFlux/dirty_asphalt_02.jpg"
 texture 0 "./DigitalFlux/dirty_asphalt_03.jpg"
 texture 0 "./makke/concrete.jpg"
 texture 0 "./makke/concrete_trim.jpg"
-texture 0 "./makke/concrete_trim_small.jpg"	//60
+texture 0 "./makke/concrete_trim_small.jpg"	
 texture 0 "./noctua/ground/snowy03.jpg"
 texture 0 "./noctua/ground/snowy04.jpg"
 texture 0 "./noctua/ground/snowy05.jpg"
@@ -203,26 +146,20 @@ texture 0 "./noctua/metal/iron01.jpg"
 texture 0 "./noctua/metal/zinc02.jpg"
 texture 0 "./noctua/metal/zinc03.jpg"
 texture 0 "./noctua/wall/plast02.jpg"
-texture 0 "./noctua/wall/conc01.jpg"		//70
+texture 0 "./noctua/wall/conc01.jpg"		
 texture 0 "./noctua/wall/conc02.jpg"
 texture 0 "./noctua/wall/conc05.jpg"
 texture 0 "./noctua/wall/wall02.jpg"
-
-//-----wall/ceiling/plaster------
-
 texture 0 "./arcitool/sichtbeton1.jpg"
 texture 0 "./arcitool/sichtbeton2.jpg"
 texture 0 "./noctua/ground/snowy02.jpg"
 texture 0 "./boeck/stone_013.jpg"
 texture 0 "./boeck/stone_014.jpg"
 texture 0 "./noctua/wall/plast01.jpg"
-texture 0 "./noctua/wall/plast03.jpg"	//80
+texture 0 "./noctua/wall/plast03.jpg"	
 texture 0 "./noctua/wall/plast04.jpg"
 texture 0 "./mitaman/various/5sqtunnelroad.jpg"
 texture 0 "./mitaman/various/027metal.jpg"
-
-//---------metal----------
-
 texture 0 "./boeck/metal_019.jpg"
 texture 0 "./boeck/metal_019_b.jpg"
 texture 0 "./mitaman/various/036metal.jpg"
@@ -249,11 +186,6 @@ texture 0 "./noctua/metal/verdig01.jpg"
 texture 0 "./noctua/metal/brass01.jpg"
 texture 0 "./mitaman/various/006metal.jpg"
 texture 0 "./mitaman/various/metal020.jpg"
-
-
-
-//-----mud/grass/sand----------
-
 texture 0 "./craig_fortune/terrain/grass_lush1.jpg"
 texture 0 "./craig_fortune/terrain/Grass_mossy.jpg"
 texture 0 "./craig_fortune/terrain/Grass_parched.jpg"
@@ -276,25 +208,18 @@ texture 0 "./noctua/ground/mud01.jpg"
 texture 0 "./noctua/ground/pebble01.jpg"
 texture 0 "./noctua/ground/ground02.jpg"
 texture 0 "./noctua/ground/ground06.jpg"
-
-
-//-------------carpet---------------
-
 texture 0 "./noctua/textile/carpet04.jpg"
 texture 0 "./noctua/textile/carpet01.jpg"
 texture 0 "./noctua/textile/carpet02.jpg"
 texture 0 "./noctua/textile/carpet03.jpg"
 texture 0 "./noctua/textile/burlap01.jpg"
 texture 0 "./noctua/textile/carpet05.jpg"
-
-//-------------trim------------------
-
 texture 0 "./arcitool/Wellblech1-1.jpg"
 texture 0 "./arcitool/Glasbausteine.jpg"
 texture 0 "./boeck/gully.jpg"
 texture 0 "./boeck/aircon2.jpg"
 texture 0 "./makke/aircon.jpg"
-texture 0 "./makke/aircon_sm.jpg"     //100
+texture 0 "./makke/aircon_sm.jpg"
 texture 0 "./makke/door.jpg"
 texture 0 "./makke/klappe.jpg"
 texture 0 "./makke/klappe2.jpg"
@@ -319,7 +244,7 @@ texture 0 "./makke/metalstair1.jpg"
 texture 0 "./makke/metalstair2.jpg"
 texture 0 "./mitaman/zastrow/metal_siding_kinksb.jpg"
 texture 0 "./makke/window.jpg"
-texture 0 "./makke/windows.jpg"     
+texture 0 "./makke/windows.jpg"
 texture 0 "./mitaman/zastrow/sub_window31.jpg"
 texture 0 "./mitaman/zastrow/sub_window33.jpg"
 texture 0 "./mitaman/various/sub_window23.jpg"
@@ -333,57 +258,38 @@ texture 0 "./mitaman/zastrow/sub_doors512A10.jpg"
 texture 0 "./mitaman/zastrow/sub_doors512A16.jpg"
 texture 0 "./mitaman/various/sub_doors256nf_01.jpg"
 texture 0 "./mitaman/3dcafe/objects08.jpg"
-
-//------crates----------
-
 texture 0 "./craig_fortune/crates/light_weathered.jpg"
 texture 0 "./craig_fortune/crates/light.jpg"
 texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
-texture 0 "./makke/box_3.jpg"           //241
-
-
-//wotwots urban textures
-
-texture 0 "wotwot/urban/electric2.jpg"  
-texture 0 "wotwot/urban/electric2_bla.jpg"
-texture 0 "wotwot/urban/asphalt1_l.jpg"  
-texture 0 "wotwot/urban/metaltrim1_ver.jpg"  
-texture 0 "wotwot/urban/metaltrim1_hor.jpg"
-texture 0 "wotwot/urban/door3.jpg"  
-texture 0 "wotwot/urban/airvent1.jpg"  
-texture 0 "wotwot/urban/ventilation1.jpg"
-texture 0 "wotwot/urban/grill2_s.jpg" 
-texture 0 "wotwot/urban/cableshelf1_s_hor.jpg" 
-texture 0 "wotwot/urban/cableshelf1_m_hor.jpg" 
-texture 0 "wotwot/urban/hatch1.jpg" 
-texture 0 "wotwot/urban/manhole1.jpg"  
-
-
-//textures made by makkE
-
-texture 0 "makke/door_metal.jpg"
-texture 0 "makke/door_metal.jpg"
-
-
-//more wotwots textures
-
-texture 0 "wotwot/urban/cableshelf1_l_hor.jpg" 
-texture 0 "wotwot/urban/cableshelf1_s_ver.jpg" 
-texture 0 "wotwot/urban/cableshelf1_m_ver.jpg" 
-texture 0 "wotwot/urban/cableshelf1_l_ver.jpg" 
-texture 0 "wotwot/urban/electric4.jpg"  
-texture 0 "wotwot/urban/electric4_bla.jpg"
-texture 0 "wotwot/urban/electric3.jpg"  
-texture 0 "wotwot/urban/electric3_bla.jpg"
-texture 0 "wotwot/urban/electric1.jpg"  
-texture 0 "wotwot/urban/electric1_bla.jpg"
-
-//modified skin for makkEs drainpipe-mapmodel
-texture 0 "wotwot/skin/drainpipe.jpg"  
-
-//modified skins for tocas mapmodels
-texture 0 "wotwot/skin/milkcarton.jpg"  
-texture 0 "wotwot/skin/guardrail2.jpg"  
-texture 0 "wotwot/skin/monitor.jpg"  
-texture 0 "wotwot/skin/commrack.jpg"  
+texture 0 "./makke/box_3.jpg"
+texture 0 "./wotwot/urban/electric2.jpg"
+texture 0 "./wotwot/urban/electric2_bla.jpg"
+texture 0 "./wotwot/urban/asphalt1_l.jpg"
+texture 0 "./wotwot/urban/metaltrim1_ver.jpg"
+texture 0 "./wotwot/urban/metaltrim1_hor.jpg"
+texture 0 "./wotwot/urban/door3.jpg"
+texture 0 "./wotwot/urban/airvent1.jpg"
+texture 0 "./wotwot/urban/ventilation1.jpg"
+texture 0 "./wotwot/urban/grill2_s.jpg"
+texture 0 "./wotwot/urban/cableshelf1_s_hor.jpg"
+texture 0 "./wotwot/urban/cableshelf1_m_hor.jpg"
+texture 0 "./wotwot/urban/hatch1.jpg"
+texture 0 "./wotwot/urban/manhole1.jpg"
+texture 0 "./makke/door_metal.jpg"
+texture 0 "./makke/door_metal.jpg"
+texture 0 "./wotwot/urban/cableshelf1_l_hor.jpg"
+texture 0 "./wotwot/urban/cableshelf1_s_ver.jpg"
+texture 0 "./wotwot/urban/cableshelf1_m_ver.jpg"
+texture 0 "./wotwot/urban/cableshelf1_l_ver.jpg"
+texture 0 "./wotwot/urban/electric4.jpg"
+texture 0 "./wotwot/urban/electric4_bla.jpg"
+texture 0 "./wotwot/urban/electric3.jpg"
+texture 0 "./wotwot/urban/electric3_bla.jpg"
+texture 0 "./wotwot/urban/electric1.jpg"
+texture 0 "./wotwot/urban/electric1_bla.jpg"
+texture 0 "wotwot/skin/drainpipe.jpg"
+texture 0 "wotwot/skin/milkcarton.jpg"
+texture 0 "wotwot/skin/guardrail2.jpg"
+texture 0 "wotwot/skin/monitor.jpg"
+texture 0 "wotwot/skin/commrack.jpg"
