--- a/ac/packages/maps/ac_shine.cfg
+++ b/ac/packages/maps/ac_shine.cfg
@@ -1,175 +1,127 @@
-// *IMPORTANT NOTE FOR AC-MAPPERS*
-// BE SURE TO COPY THIS FILE AND MAKE IT YOUR MAP CONFIG
-// BEFORE(!!) YOU EDIT ANYTHING.
-// THEN START AC, GO EDIT-MODE,GO /NEWMAP
-// then SAVE YOUR MAP (AS YOURCONFIGNAME.CGZ) AND RELOAD IT!
-// OTHERWISE YOU WILL USE THE START MAPS SETTINGS WHICH ARE
-// DIFFRENT SO UPON 2ND LOAD YOUR MAP
-// WOULD BE SCREWED UP...
-
-mapmodelreset // start @ zero
-
-mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
-//                                     models that can´t be clipped properly otherwise
-
-mapmodel 4 1 0 0 "comp_bridge"    //1
-mapmodel 0 7 0 0 "ladder_7x"   	    //2
-mapmodel 0 8 0 0 "ladder_8x"       //3
-mapmodel 0 10 0 0 "ladder_10x"     //4
-mapmodel 0 11 0 0 "ladder_11x"     //5
-mapmodel 0 15 0 0 "ladder_15x"     //6 
-mapmodel 0 12 0 0 "streetlamp"     //7
-mapmodel 0 12 0 0 "streetlamp"     //8
-mapmodel 3  2 0 0 "bench"          //9
-mapmodel 2 4 0 0 "dumpster"        //10
-mapmodel 0 0 0 0 "roadblock01"     //11 use nothing mapmodels to clip
-mapmodel 0 0 0 0 "roadblock02"     //12
-mapmodel 1 8 0 0 "fence"           //13 mind the orientation of fence components (lightning)
-mapmodel 1 8 0 0 "fencepost"       //14  
-mapmodel 0 0 0 0 "fencegate_open"  //15
-mapmodel 1 8 0 0 "fencegate_closed"//16
-mapmodel 0 0 0 0 "grass01"         //17
-mapmodel 0 0 0 0 "grass01_d"       //18
-mapmodel 0 0 0 0 "grass01_s"       //19
-mapmodel 0 0 0 0 "grass02"         //20
-mapmodel 0 0 0 0 "grass02_d"       //21
-mapmodel 0 0 0 0 "grass02_s"       //22
-mapmodel 0 0 0 0 "plant01"         //23
-mapmodel 0 0 0 0 "plant01_d"       //24
-mapmodel 0 0 0 0 "plant01_s"       //25
-mapmodel 0 0 0 0 "tree01"          //26
-mapmodel 1 2 0 0 "chair1"          //27
-mapmodel 0 0 0 0 "laptop1"         //28
-mapmodel 0 0 0 0 "picture1"        //29 If you wish to put a custom pic in the frame
-//                                      use skin_blanco.jpg
-//                                      please make a new folder,
-//                                      preferably called picture1_yourmapname. 
-mapmodel 1 6 0 0 "locker"          //30
-mapmodel 0 0 0 0 "strahler"        //31
-mapmodel 0 0 0 0 "light01"         //32 
-mapmodel 0 0 0 0 "bulb"            //33
-mapmodel 1  3 0 0 "barrel"         //34
-mapmodel 1  2 0 0 "barrel2"        //35
-mapmodel 0  0 0 0 "elektro"        //36  
-mapmodel 3  1 0 0 "europalette"    //37
-mapmodel 0 0 0 0 "gastank"         //38 use nothing model to clip
-mapmodel 2 1 0 0 "gutter_h"        //39
-mapmodel 1 2 0 0 "gutter_v"        //40
-mapmodel 0 0 0 0 "wrench"          //41
-mapmodel 0 0 0 0 "screw"           //42
-mapmodel 0  0 0 0 "signs/flammable"//43
-mapmodel 0  0 0 0 "signs/speed"    //44
-mapmodel 0  0 0 0 "signs/maint"    //45
-mapmodel 0  0 0 0 "signs/caution"  //46
-mapmodel 0 0 0 0 "signs/biohazard" //47 
-mapmodel 0 0 0 0 "fag"             //48
-mapmodel 0 0 0 0 "can"             //49
-mapmodel 0 0 0 0 "can2"            //50
-mapmodel 0 0 0 0 "wood01"          //51
-mapmodel 0 0 0 0 "hook"            //52
-mapmodel 0 0 0 0 "coffeemug"       //53
-mapmodel 0 0 0 0 "flyer"           //54
-mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
-mapmodel 1 1 0 0 "aard"            //56
-
-
-
-
-//**********   Toca's 3d models    *******************
+mapmodelreset
+mapmodel 0 0 0 0 "nothing"
+mapmodel 4 1 0 0 "comp_bridge"
+mapmodel 0 7 0 0 "ladder_7x"   	
+mapmodel 0 8 0 0 "ladder_8x"
+mapmodel 0 10 0 0 "ladder_10x"
+mapmodel 0 11 0 0 "ladder_11x"
+mapmodel 0 15 0 0 "ladder_15x"
+mapmodel 0 12 0 0 "streetlamp"
+mapmodel 0 12 0 0 "streetlamp"
+mapmodel 3  2 0 0 "bench"
+mapmodel 2 4 0 0 "dumpster"
+mapmodel 0 0 0 0 "roadblock01"
+mapmodel 0 0 0 0 "roadblock02"
+mapmodel 1 8 0 0 "fence"
+mapmodel 1 8 0 0 "fencepost"
+mapmodel 0 0 0 0 "fencegate_open"
+mapmodel 1 8 0 0 "fencegate_closed"
+mapmodel 0 0 0 0 "grass01"
+mapmodel 0 0 0 0 "grass01_d"
+mapmodel 0 0 0 0 "grass01_s"
+mapmodel 0 0 0 0 "grass02"
+mapmodel 0 0 0 0 "grass02_d"
+mapmodel 0 0 0 0 "grass02_s"
+mapmodel 0 0 0 0 "plant01"
+mapmodel 0 0 0 0 "plant01_d"
+mapmodel 0 0 0 0 "plant01_s"
+mapmodel 0 0 0 0 "tree01"
+mapmodel 1 2 0 0 "chair1"
+mapmodel 0 0 0 0 "laptop1"
+mapmodel 0 0 0 0 "picture1"
+mapmodel 1 6 0 0 "locker"
+mapmodel 0 0 0 0 "strahler"
+mapmodel 0 0 0 0 "light01"
+mapmodel 0 0 0 0 "bulb"
+mapmodel 1  3 0 0 "barrel"
+mapmodel 1  2 0 0 "barrel2"
+mapmodel 0  0 0 0 "elektro"
+mapmodel 3  1 0 0 "europalette"
+mapmodel 0 0 0 0 "gastank"
+mapmodel 2 1 0 0 "gutter_h"
+mapmodel 1 2 0 0 "gutter_v"
+mapmodel 0 0 0 0 "wrench"
+mapmodel 0 0 0 0 "screw"
+mapmodel 0  0 0 0 "signs/flammable"
+mapmodel 0  0 0 0 "signs/speed"
+mapmodel 0  0 0 0 "signs/maint"
+mapmodel 0  0 0 0 "signs/caution"
+mapmodel 0 0 0 0 "signs/biohazard"
+mapmodel 0 0 0 0 "fag"
+mapmodel 0 0 0 0 "can"
+mapmodel 0 0 0 0 "can2"
+mapmodel 0 0 0 0 "wood01"
+mapmodel 0 0 0 0 "hook"
+mapmodel 0 0 0 0 "coffeemug"
+mapmodel 0 0 0 0 "flyer"
+mapmodel 0 0 0 0 "poster"
+mapmodel 1 1 0 0 "aard"
 fogcolour 0x6B572E
 fog 250
-
-mapmodel 1 3 0 0 "toca/plasmatv"		//57
-mapmodel 3 7 0 0 "toca/radarconsole"		//58
-mapmodel 1 7 0 0 "toca/commrack"		//59
-mapmodel 1 3 0 0 "toca/commrack2"		//60
-mapmodel 1 0 0 0 "toca/powermeter"		//61
-mapmodel 0 0 0 0 "nothing"			//62
-mapmodel 0 0 0 0 "nothing"			//63
-mapmodel 0 0 0 0 "nothing"			//64
-mapmodel 1 2 0 0 "toca/trashbag"		//65
-mapmodel 1 2 0 0 "toca/computer/pc"		//66
-mapmodel 1 2 0 0 "toca/computer/monkeymou"	//67
-mapmodel 2 3 0 0 "toca/officedesk"		//68
-mapmodel 1 2 0 0 "toca/monitor"			//69
-mapmodel 1 2 0 0 "toca/tv"			//70
-mapmodel 1 1 0 0 "toca/securitycam/vertmount"	//71
-mapmodel 1 1 0 0 "toca/securitycam/wallmount"	//72
-mapmodel 1 1 0 0 "toca/securitycam/secucam"	//73
-mapmodel 4 1 0 0 "bridge_shine"		//74 - Check this...
-mapmodel 0 0 0 0 "nothing"			//75
-mapmodel 0 0 0 0 "toca/guardrail"		//76
-mapmodel 1 3 0 0 "nothing"			//77 guardrail clipping
-mapmodel 1 4 0 0 "toca/guardrail2"		//78
-mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	//79
-mapmodel 2 1 0 0 "toca/tyre"			//80
-mapmodel 1 3 0 0 "toca/wheel"			//81
-mapmodel 3 3 0 0 "toca/utilitytable"		//82
-mapmodel 1 1 0 0 "toca/milkcarton"		//83
-mapmodel 0 0 0 0 "toca/bullet"			//84
-mapmodel 0 0 0 0 "toca/sgshell"			//85
-mapmodel 1 4 0 0 "nothing"			//86 guardrail2 clipping
-mapmodel 0 0 0 0 "nothing"			//87
-mapmodel 1 3 0 0 "toca/trashcan"		//88 
-mapmodel 1 5 0 0 "toca/signs/target"		//89
-mapmodel 0 0 0 0 "toca/signs/toxic"		//90
-mapmodel 0 0 0 0 "toca/signs/radioactive"	//91
-mapmodel 0 0 0 0 "toca/signs/biohazard"		//92
-mapmodel 0 0 0 0 "toca/signs/resticted"		//93
-mapmodel 0 0 0 0 "toca/signs/firstaid"		//94
-mapmodel 0 0 0 0 "toca/signs/noentry"		//95
-mapmodel 0 0 0 0 "toca/signs/nosmoking"		//96
-mapmodel 0 0 0 0 "toca/signs/donotenter"	//97
-mapmodel 0 0 0 0 "toca/signs/chemical"		//98
-mapmodel 0 0 0 0 "toca/signs/confined"		//99
-mapmodel 0 0 0 0 "toca/signs/explosives"	//100
-mapmodel 4 1 0 0 "toca/platformmet"		//101
-mapmodel 4 1 7 0 "toca/stairs1"			//102
-mapmodel 4 1 7 0 "toca/stairs2"			//103
-mapmodel 0 0 0 0 "nothing"			//104 stairs clipping
-mapmodel 1 1 0 0 "toca/cinderblock"		//105
-mapmodel 1 8 0 0 "toca/corrugated/fence1"	//106
-mapmodel 1 8 0 0 "toca/corrugated/fence2"	//107
-mapmodel 1 8 0 0 "toca/corrugated/beam"		//108
-mapmodel 2 6 0 0 "toca/rack"			//109
-mapmodel 2 2 0 0 "toca/airconditioner"		//110
-mapmodel 2 2 0 0 "toca/airconditioner/interior"	//111
-
-mapmodel 1 24 0 0 "fence"           //112 mind the orientation of fence components (lightning)
-mapmodel 1 24 0 0 "fencepost"       //113
-mapmodel 1 24 0 0 "fencegate_closed"//114
-mapmodel 0  0 0 0 "signs/arab"     //115
+mapmodel 1 3 0 0 "toca/plasmatv"		
+mapmodel 3 7 0 0 "toca/radarconsole"		
+mapmodel 1 7 0 0 "toca/commrack"		
+mapmodel 1 3 0 0 "toca/commrack2"		
+mapmodel 1 0 0 0 "toca/powermeter"		
+mapmodel 0 0 0 0 "nothing"			
+mapmodel 0 0 0 0 "nothing"			
+mapmodel 0 0 0 0 "nothing"			
+mapmodel 1 2 0 0 "toca/trashbag"		
+mapmodel 1 2 0 0 "toca/computer/pc"		
+mapmodel 1 2 0 0 "toca/computer/monkeymou"	
+mapmodel 2 3 0 0 "toca/officedesk"		
+mapmodel 1 2 0 0 "toca/monitor"			
+mapmodel 1 2 0 0 "toca/tv"			
+mapmodel 1 1 0 0 "toca/securitycam/vertmount"	
+mapmodel 1 1 0 0 "toca/securitycam/wallmount"	
+mapmodel 1 1 0 0 "toca/securitycam/secucam"	
+mapmodel 4 1 0 0 "bridge_shine"		
+mapmodel 0 0 0 0 "nothing"		
+mapmodel 0 0 0 0 "toca/guardrail"		
+mapmodel 1 3 0 0 "nothing"		
+mapmodel 1 4 0 0 "toca/guardrail2"		
+mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	
+mapmodel 2 1 0 0 "toca/tyre"			
+mapmodel 1 3 0 0 "toca/wheel"			
+mapmodel 3 3 0 0 "toca/utilitytable"		
+mapmodel 1 1 0 0 "toca/milkcarton"		
+mapmodel 0 0 0 0 "toca/bullet"			
+mapmodel 0 0 0 0 "toca/sgshell"			
+mapmodel 1 4 0 0 "nothing"			
+mapmodel 0 0 0 0 "nothing"			
+mapmodel 1 3 0 0 "toca/trashcan"		
+mapmodel 1 5 0 0 "toca/signs/target"		
+mapmodel 0 0 0 0 "toca/signs/toxic"		
+mapmodel 0 0 0 0 "toca/signs/radioactive"	
+mapmodel 0 0 0 0 "toca/signs/biohazard"		
+mapmodel 0 0 0 0 "toca/signs/resticted"		
+mapmodel 0 0 0 0 "toca/signs/firstaid"		
+mapmodel 0 0 0 0 "toca/signs/noentry"		
+mapmodel 0 0 0 0 "toca/signs/nosmoking"		
+mapmodel 0 0 0 0 "toca/signs/donotenter"	
+mapmodel 0 0 0 0 "toca/signs/chemical"		
+mapmodel 0 0 0 0 "toca/signs/confined"		
+mapmodel 0 0 0 0 "toca/signs/explosives"	
+mapmodel 4 1 0 0 "toca/platformmet"		
+mapmodel 4 1 7 0 "toca/stairs1"			
+mapmodel 4 1 7 0 "toca/stairs2"			
+mapmodel 0 0 0 0 "nothing"			
+mapmodel 1 1 0 0 "toca/cinderblock"		
+mapmodel 1 8 0 0 "toca/corrugated/fence1"	
+mapmodel 1 8 0 0 "toca/corrugated/fence2"	
+mapmodel 1 8 0 0 "toca/corrugated/beam"		
+mapmodel 2 6 0 0 "toca/rack"			
+mapmodel 2 2 0 0 "toca/airconditioner"		
+mapmodel 2 2 0 0 "toca/airconditioner/interior"	
+mapmodel 1 24 0 0 "fence"
+mapmodel 1 24 0 0 "fencepost"
+mapmodel 1 24 0 0 "fencegate_closed"
+mapmodel 0 0 0 0 "signs/arab"
 mapmodel 2 3 0 0 "nothing"
-
-// skybox for this map - check /packages/skymaps/
-
-//loadsky "textures/skymaps/steini/steini2"
-//loadsky "textures/skymaps/steini/steini3"
-//loadsky "textures/skymaps/makke/rocky"
-//loadsky "textures/skymaps/makke/mountain"
 loadsky "textures/skymaps/makke/sand"
-
-
-// texture 0 is hardcoded as the sky
-// texture 1 is hardcoded as the default liquid texture
-// texture 2 is the default wall texture (for new maps)
-// texture 3 is the default floor texture
-// texture 4 is the default ceiling texture
-
-texturereset    // starts the texture slot/index at 0
-
-texture 0 "kurt/klite1.jpg" //dummy
-
-//-------------water-uncomment all but one!------
-
-texture 0 "./noctua/water/water01.jpg"
-//texture 0 "./noctua/water/water04.jpg"
-//texture 0 "./noctua/water/water05.jpg"
-//texture 0 "./makke/muddywater.jpg"
-//texture 0 "./noctua/water/snow01.jpg"
-
-//-----brickwalls-------
-
+texturereset
+texture 0 "./kurt/klite1.jpg"
+texture 0 "./makke/black.jpg"
 texture 0 "./arcitool/archibrick01.jpg"
 texture 0 "./arcitool/archibrick02.jpg"
 texture 0 "./arcitool/archibrick03.jpg"
@@ -195,9 +147,6 @@ texture 0 "./makke/mauer1.jpg"
 texture 0 "./makke/mauer2.jpg"
 texture 0 "./makke/d_brick.jpg"
 texture 0 "./mitaman/3dcafe/stone18.jpg"
-
-//---- tiles --------
-
 texture 0 "./noctua/tiles/16tile12.jpg"
 texture 0 "./noctua/tiles/16tile09.jpg"
 texture 0 "./noctua/tiles/16tile10.jpg"
@@ -212,9 +161,6 @@ texture 0 "./arcitool/Cotta2-dunkel.jpg"
 texture 0 "./arcitool/Cotta2-grau.jpg"
 texture 0 "./arcitool/Cotta2-satt.jpg"
 texture 0 "./makke/tiles.jpg"
-
-//------floorings----------------
-
 texture 0 "./noctua/ground/cobbles01.jpg"
 texture 0 "./arcitool/pflaster2.jpg"
 texture 0 "./arcitool/gittersteine2.jpg"
@@ -225,9 +171,6 @@ texture 0 "./makke/c_tile.jpg"
 texture 0 "./makke/pebbles_01.jpg"
 texture 0 "./arcitool/sisal21.jpg"
 texture 0 "./makke/platten.jpg"
-
-//------asphalt/concrete------------------------
-
 texture 0 "./noctua/ground/asph01.jpg"
 texture 0 "./noctua/ground/asph02.jpg"
 texture 0 "./noctua/ground/asph03.jpg"
@@ -250,9 +193,6 @@ texture 0 "./noctua/wall/conc01.jpg"
 texture 0 "./noctua/wall/conc02.jpg"
 texture 0 "./noctua/wall/conc05.jpg"
 texture 0 "./noctua/wall/wall02.jpg"
-
-//-----wall/ceiling/plaster------
-
 texture 0 "./arcitool/sichtbeton1.jpg"
 texture 0 "./arcitool/sichtbeton2.jpg"
 texture 0 "./noctua/ground/snowy02.jpg"
@@ -263,9 +203,6 @@ texture 0 "./noctua/wall/plast03.jpg"
 texture 0 "./noctua/wall/plast04.jpg"
 texture 0 "./mitaman/various/5sqtunnelroad.jpg"
 texture 0 "./mitaman/various/027metal.jpg"
-
-//---------metal----------
-
 texture 0 "./boeck/metal_019.jpg"
 texture 0 "./boeck/metal_019_b.jpg"
 texture 0 "./mitaman/various/036metal.jpg"
@@ -292,9 +229,6 @@ texture 0 "./noctua/metal/verdig01.jpg"
 texture 0 "./noctua/metal/brass01.jpg"
 texture 0 "./mitaman/various/006metal.jpg"
 texture 0 "./mitaman/various/metal020.jpg"
-
-//-------wood---------------------
-
 texture 0 "./boeck/wood_009.jpg"
 texture 0 "./boeck/wood_010.jpg"
 texture 0 "./boeck/wood_017.jpg"
@@ -318,9 +252,6 @@ texture 0 "./noctua/wood/wood03.jpg"
 texture 0 "./noctua/wood/wood04.jpg"
 texture 0 "./mitaman/various/063bois.jpg"
 texture 0 "./mitaman/various/063bois_b.jpg"
-
-//-----mud/grass/sand----------
-
 texture 0 "./craig_fortune/terrain/grass_lush1.jpg"
 texture 0 "./craig_fortune/terrain/Grass_mossy.jpg"
 texture 0 "./craig_fortune/terrain/Grass_parched.jpg"
@@ -341,11 +272,8 @@ texture 0 "./makke/dirt_01.jpg"
 texture 0 "./makke/stuck1.jpg"
 texture 0 "./noctua/ground/mud01.jpg"
 texture 0 "./noctua/ground/pebble01.jpg"
-texture 0 "./noctua/ground/ground02.jpg"<Harps> SeargeantShithead: was the "other fps" called AssaultCube?
+texture 0 "./noctua/ground/ground02.jpg"
 texture 0 "./noctua/ground/ground06.jpg"
-
-//-----rock/stone----------------
-
 texture 0 "./arcitool/schotter1.jpg"
 texture 0 "./arcitool/schotter2.jpg"
 texture 0 "./craig_fortune/terrain/Rock_cracked.jpg"
@@ -372,24 +300,18 @@ texture 0 "./noctua/stone/stone19.jpg"
 texture 0 "./noctua/wall/conc03.jpg"
 texture 0 "./noctua/wall/conc04.jpg"
 texture 0 "./noctua/wall/d_wall01.jpg"
-
-//-------------carpet---------------
-
 texture 0 "./noctua/textile/carpet04.jpg"
 texture 0 "./noctua/textile/carpet01.jpg"
 texture 0 "./noctua/textile/carpet02.jpg"
 texture 0 "./noctua/textile/carpet03.jpg"
 texture 0 "./noctua/textile/burlap01.jpg"
 texture 0 "./noctua/textile/carpet05.jpg"
-
-//-------------trim------------------
-
 texture 0 "./arcitool/Wellblech1-1.jpg"
 texture 0 "./arcitool/Glasbausteine.jpg"
 texture 0 "./boeck/gully.jpg"
 texture 0 "./boeck/aircon2.jpg"
 texture 0 "./makke/aircon.jpg"
-texture 0 "./makke/aircon_sm.jpg"     //100
+texture 0 "./makke/aircon_sm.jpg"
 texture 0 "./makke/door.jpg"
 texture 0 "./makke/klappe.jpg"
 texture 0 "./makke/klappe2.jpg"
@@ -414,7 +336,7 @@ texture 0 "./makke/metalstair1.jpg"
 texture 0 "./makke/metalstair2.jpg"
 texture 0 "./mitaman/zastrow/metal_siding_kinksb.jpg"
 texture 0 "./makke/window.jpg"
-texture 0 "./makke/windows.jpg"     
+texture 0 "./makke/windows.jpg"
 texture 0 "./mitaman/zastrow/sub_window31.jpg"
 texture 0 "./mitaman/zastrow/sub_window33.jpg"
 texture 0 "./mitaman/various/sub_window23.jpg"
@@ -428,9 +350,6 @@ texture 0 "./mitaman/zastrow/sub_doors512A10.jpg"
 texture 0 "./mitaman/zastrow/sub_doors512A16.jpg"
 texture 0 "./mitaman/various/sub_doors256nf_01.jpg"
 texture 0 "./mitaman/3dcafe/objects08.jpg"
-
-//------crates----------
-
 texture 0 "./craig_fortune/crates/light_weathered.jpg"
 texture 0 "./craig_fortune/crates/light.jpg"
 texture 0 "./zastrow/3wood_crate_03.jpg"
@@ -447,14 +366,12 @@ texture 0 "./zastrow/wood_crate_10.jpg"
 texture 0 "./zastrow/wood_crate_12.jpg"
 texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
-texture 0 "./makke/box_3.jpg"           //241
-
-texture 0 "./dog/texture08.jpg"	//242
+texture 0 "./makke/box_3.jpg"
+texture 0 "./dog/texture08.jpg"	
 texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture08.jpg"
-
 texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture09.jpg"
