--- a/ac/packages/maps/ac_snow.cfg
+++ b/ac/packages/maps/ac_snow.cfg
@@ -1,111 +1,67 @@
-// *IMPORTANT NOTE FOR AC-MAPPERS*
-// BE SURE TO COPY THIS FILE AND MAKE IT YOUR MAP CONFIG
-// BEFORE(!!) YOU EDIT ANYTHING.
-// THEN START AC, GO EDIT-MODE,GO /NEWMAP
-// then SAVE YOUR MAP (AS YOURCONFIGNAME.CGZ) AND RELOAD IT!
-// OTHERWISE YOU WILL USE THE START MAPS SETTINGS WHICH ARE
-// DIFFRENT SO UPON 2ND LOAD YOUR MAP
-// WOULD BE SCREWED UP...
-
-
 shadowyaw 180
-mapmodelreset // start @ zero
-
-mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
-//                                     models that can«t be clipped properly otherwise
-
-mapmodel 3  1 0 0 "comp_bridge"    //1
-mapmodel 0 7 0 0 "ladder_7x"       //2
-mapmodel 0 8 0 0 "ladder_8x"       //3
-mapmodel 0 10 0 0 "ladder_10x"     //4
-mapmodel 0 11 0 0 "ladder_11x"     //5
-mapmodel 0 15 0 0 "ladder_15x"     //6 
-mapmodel 0 12 0 0 "streetlamp"     //7
-mapmodel 0 12 0 0 "streetlamp"     //8
-mapmodel 3  2 0 0 "bench"          //9
-mapmodel 2 4 0 0 "dumpster"        //10
-mapmodel 0 0 0 0 "roadblock01"     //11 use nothing mapmodels to clip
-mapmodel 0 0 0 0 "roadblock02"     //12
-mapmodel 1 8 0 0 "fence"           //13 mind the orientation of fence components (lightning)
-mapmodel 1 8 0 0 "fencepost"       //14  
-mapmodel 1 8 0 0 "fencegate_open"  //15
-mapmodel 1 8 0 0 "fencegate_closed"//16
-mapmodel 0 0 0 0 "grass01"         //17
-mapmodel 0 0 0 0 "grass01_d"       //18
-mapmodel 0 0 0 0 "grass01_s"       //19
-mapmodel 0 0 0 0 "grass02"         //20
-mapmodel 0 0 0 0 "grass02_d"       //21
-mapmodel 0 0 0 0 "grass02_s"       //22
-mapmodel 0 0 0 0 "plant01"         //23
-mapmodel 0 0 0 0 "plant01_d"       //24
-mapmodel 0 0 0 0 "plant01_s"       //25
-mapmodel 0 0 0 0 "tree01"          //26
-mapmodel 1 2 0 0 "chair1"          //27
-mapmodel 0 0 0 0 "laptop1"         //28
-mapmodel 0 0 0 0 "picture1"        //29 If you wish to put a custom pic in the frame
-//                                      use skin_blanco.jpg
-//                                      please make a new folder,
-//                                      preferably called picture1_yourmapname. 
-mapmodel 1 6 0 0 "locker"          //30
-mapmodel 0 0 0 0 "strahler"        //31
-mapmodel 0 0 0 0 "light01"         //32 
-mapmodel 0 0 0 0 "bulb"            //33
-mapmodel 1  3 0 0 "barrel"         //34
-mapmodel 1  2 0 0 "barrel2"        //35
-mapmodel 0  0 0 0 "elektro"        //36  
-mapmodel 3  1 0 0 "europalette"    //37
-mapmodel 0 0 0 0 "gastank"         //38 use nothing model to clip
-mapmodel 2 1 0 0 "gutter_h"        //39
-mapmodel 1 2 0 0 "gutter_v"        //40
-mapmodel 0 0 0 0 "wrench"          //41
-mapmodel 0 0 0 0 "screw"           //42
-mapmodel 0  0 0 0 "signs/flammable"//43
-mapmodel 0  0 0 0 "signs/speed"    //44
-mapmodel 0  0 0 0 "signs/maint"    //45
-mapmodel 0  0 0 0 "signs/caution"  //46
-mapmodel 0 0 0 0 "signs/biohazard" //47 
-mapmodel 0 0 0 0 "fag"             //48
-mapmodel 0 0 0 0 "can"             //49
-mapmodel 0 0 0 0 "can2"            //50
-mapmodel 0 0 0 0 "wood01"          //51
-mapmodel 0 0 0 0 "hook"            //52
-mapmodel 0 0 0 0 "coffeemug"       //53
-mapmodel 0 0 0 0 "flyer"           //54
-mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
-mapmodel 1 1 0 0 "aard"            //56
-
-//fog image for this map
+mapmodelreset
+mapmodel 0 0 0 0 "nothing"
+mapmodel 3 1 0 0 "comp_bridge"
+mapmodel 0 7 0 0 "ladder_7x"
+mapmodel 0 8 0 0 "ladder_8x"
+mapmodel 0 10 0 0 "ladder_10x"
+mapmodel 0 11 0 0 "ladder_11x"
+mapmodel 0 15 0 0 "ladder_15x"
+mapmodel 0 12 0 0 "streetlamp"
+mapmodel 0 12 0 0 "streetlamp"
+mapmodel 3  2 0 0 "bench"
+mapmodel 2 4 0 0 "dumpster"
+mapmodel 0 0 0 0 "roadblock01"
+mapmodel 0 0 0 0 "roadblock02"
+mapmodel 1 8 0 0 "fence"
+mapmodel 1 8 0 0 "fencepost"
+mapmodel 1 8 0 0 "fencegate_open"
+mapmodel 1 8 0 0 "fencegate_closed"
+mapmodel 0 0 0 0 "grass01"
+mapmodel 0 0 0 0 "grass01_d"
+mapmodel 0 0 0 0 "grass01_s"
+mapmodel 0 0 0 0 "grass02"
+mapmodel 0 0 0 0 "grass02_d"
+mapmodel 0 0 0 0 "grass02_s"
+mapmodel 0 0 0 0 "plant01"
+mapmodel 0 0 0 0 "plant01_d"
+mapmodel 0 0 0 0 "plant01_s"
+mapmodel 0 0 0 0 "tree01"
+mapmodel 1 2 0 0 "chair1"
+mapmodel 0 0 0 0 "laptop1"
+mapmodel 0 0 0 0 "picture1"
+mapmodel 1 6 0 0 "locker"
+mapmodel 0 0 0 0 "strahler"
+mapmodel 0 0 0 0 "light01"
+mapmodel 0 0 0 0 "bulb"
+mapmodel 1 3 0 0 "barrel"
+mapmodel 1 2 0 0 "barrel2"
+mapmodel 0 0 0 0 "elektro"
+mapmodel 3 1 0 0 "europalette"
+mapmodel 0 0 0 0 "gastank"
+mapmodel 2 1 0 0 "gutter_h"
+mapmodel 1 2 0 0 "gutter_v"
+mapmodel 0 0 0 0 "wrench"
+mapmodel 0 0 0 0 "screw"
+mapmodel 0 0 0 0 "signs/flammable"
+mapmodel 0 0 0 0 "signs/speed"
+mapmodel 0 0 0 0 "signs/maint"
+mapmodel 0 0 0 0 "signs/caution"
+mapmodel 0 0 0 0 "signs/biohazard"
+mapmodel 0 0 0 0 "fag"
+mapmodel 0 0 0 0 "can"
+mapmodel 0 0 0 0 "can2"
+mapmodel 0 0 0 0 "wood01"
+mapmodel 0 0 0 0 "hook"
+mapmodel 0 0 0 0 "coffeemug"
+mapmodel 0 0 0 0 "flyer"
+mapmodel 0 0 0 0 "poster"
+mapmodel 1 1 0 0 "aard"
 fog 150
-
-
-
-// skybox for this map - check /packages/skymaps/
-
 loadsky "/textures/skymaps/steini/steini2"
-
-
-// used textures in this map - check /packages/textures/
-
-// texture 0 is hardcoded as the sky
-// texture 1 is hardcoded as the default liquid texture
-// texture 2 is the default wall texture (for new maps)
-// texture 3 is the default floor texture
-// texture 4 is the default ceiling texture
-
-texturereset    // starts the texture slot/index at 0
-
-texture 0 "kurt/klite1.jpg" //dummy
-
-//-------------water-uncomment all but one!------
-
-texture 0 "./noctua/water/water01.jpg"
-//texture 0 "./noctua/water/water04.jpg"
-//texture 0 "./noctua/water/water05.jpg"
-//texture 0 "./makke/muddywater.jpg"
-//texture 0 "./noctua/water/snow01.jpg"
-
-//-----brickwalls-------
-
+texturereset
+texture 0 "./kurt/klite1.jpg"
+texture 0 "./makke/black.jpg"
 texture 0 "./arcitool/rohbaubims.jpg"
 texture 0 "./mitaman/grsites/brick051.jpg"
 texture 0 "./mitaman/grsites/brick065.jpg"
@@ -114,17 +70,8 @@ texture 0 "./makke/bricks_2.jpg"
 texture 0 "./noctua/wall/brick02.jpg"
 texture 0 "./makke/mauer1.jpg"
 texture 0 "./makke/mauer2.jpg"
-//---- tiles --------
-
-
-
-//------floorings----------------
-
 texture 0 "./makke/stein.jpg"
 texture 0 "./makke/pebbles_01.jpg"
-
-//------asphalt/concrete------------------------
-
 texture 0 "./noctua/ground/asph01.jpg"
 texture 0 "./noctua/ground/asph02.jpg"
 texture 0 "./noctua/ground/asph03.jpg"
@@ -142,18 +89,12 @@ texture 0 "./noctua/wall/plast02.jpg"
 texture 0 "./noctua/wall/conc01.jpg"
 texture 0 "./noctua/wall/conc02.jpg"
 texture 0 "./noctua/wall/conc05.jpg"
-
-//-----wall/ceiling/plaster------
-
 texture 0 "./arcitool/sichtbeton1.jpg"
 texture 0 "./arcitool/sichtbeton2.jpg"
 texture 0 "./noctua/ground/snowy02.jpg"
 texture 0 "./boeck/stone_013.jpg"
 texture 0 "./noctua/wall/plast01.jpg"
 texture 0 "./noctua/wall/plast03.jpg"
-
-//---------metal----------
-
 texture 0 "./mitaman/various/036metal.jpg"
 texture 0 "./boeck/rolltor.jpg"
 texture 0 "./mitaman/golgotha/hhroofgray.jpg"
@@ -163,25 +104,16 @@ texture 0 "./noctua/metal/copper01.jpg"
 texture 0 "./noctua/metal/copper02.jpg"
 texture 0 "./noctua/metal/iron02.jpg"
 texture 0 "./noctua/metal/iron04.jpg"
-
-//-------wood---------------------
-
 texture 0 "./noctua/wood/blinds01.jpg"
 texture 0 "./noctua/wood/planks01.jpg"
 texture 0 "./noctua/wood/planks01_b.jpg"
 texture 0 "./noctua/wood/planks02.jpg"
 texture 0 "./noctua/wood/planks02_hor.jpg"
 texture 0 "./noctua/wood/planks02_trim.jpg"
-
-//-----mud/grass/sand----------
-
 texture 0 "./craig_fortune/terrain/Grass_mossy.jpg"
 texture 0 "./craig_fortune/terrain/sand_bleached.jpg"
 texture 0 "./DigitalFlux/light_brown_dirt_01.jpg"
 texture 0 "./noctua/ground/ground06.jpg"
-
-//-----rock/stone----------------
-
 texture 0 "./arcitool/schotter1.jpg"
 texture 0 "./arcitool/schotter2.jpg"
 texture 0 "./craig_fortune/terrain/Rock_cracked.jpg"
@@ -195,12 +127,6 @@ texture 0 "./noctua/stone/stone09.jpg"
 texture 0 "./noctua/stone/marmor01.jpg"
 texture 0 "./noctua/stone/stone19.jpg"
 texture 0 "./noctua/stone/stone19.jpg"
-
-//-------------carpet---------------
-
-
-//-------------trim------------------
-
 texture 0 "./boeck/gully.jpg"
 texture 0 "./makke/aircon.jpg"
 texture 0 "./makke/aircon_sm.jpg"     //100
@@ -228,9 +154,6 @@ texture 0 "./mitaman/zastrow/sub_doors512A10.jpg"
 texture 0 "./mitaman/zastrow/sub_doors512A16.jpg"
 texture 0 "./mitaman/various/sub_doors256nf_01.jpg"
 texture 0 "./mitaman/3dcafe/objects08.jpg"
-
-//------crates----------
-
 texture 0 "./craig_fortune/crates/light_weathered.jpg"
 texture 0 "./craig_fortune/crates/light.jpg"
 texture 0 "./zastrow/3wood_crate_03.jpg"
@@ -247,4 +170,4 @@ texture 0 "./zastrow/wood_crate_10.jpg"
 texture 0 "./zastrow/wood_crate_12.jpg"
 texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
-texture 0 "./makke/box_3.jpg"           //241
+texture 0 "./makke/box_3.jpg"
