fixes to ac_power. ac_power waypoints cfg cleanups ac_toxic license update
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2802 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_mines.cfg
+++ b/ac/packages/maps/ac_mines.cfg
@@ -49,7 +49,7 @@ mapmodel 0 15 0 0 "ladder_15x"
 mapmodel 0 0 0 0 "bulb"
 loadsky "textures/skymaps/makke/rocky"
 texturereset
-texture 0 "./kurt/klite1.jpg" //damn dummy
+texture 0 "./kurt/klite1.jpg"
 texture 0 "./makke/black.jpg"
 texture 0 "./craig_fortune/terrain/Mud_thick.jpg"
 texture 0 "./craig_fortune/terrain/Mud_thick.jpg"
