--- a/ac/packages/maps/ac_power.cfg
+++ b/ac/packages/maps/ac_power.cfg
@@ -1,6 +1,6 @@
-//Power Station by wotwot, edited by makkE
-//Custom textures by wotwot and makkE
-//Custom mapmodels by makkE and Toca
+// Power Station by wotwot, edited by makkE
+// Custom textures by wotwot and makkE
+// Custom mapmodels by makkE and Toca
 fogcolour 0
 shadowyaw 180
 mapmodelreset
@@ -73,8 +73,9 @@ mapmodel 0 0 0 0 "toca/monitor"
 mapmodel 1 2 0 0 "toca/trashbag"		
 mapmodel 1 1 0 0 "toca/milkcarton"		
 mapmodel 1 7 0 0 "toca/commrack"		
-mapmodel 1 4 0 0 "toca/guardrail2"		
-mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	
+mapmodel 1 4 0 0 "toca/guardrail2"
+mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"
+mapmodel 1 4 0 0 "nothing"
 loadsky "textures/skymaps/steini/steini4"
 texturereset
 texture 0 "./kurt/klite1.jpg"
@@ -288,8 +289,8 @@ texture 0 "./wotwot/urban/electric3.jpg"
 texture 0 "./wotwot/urban/electric3_bla.jpg"
 texture 0 "./wotwot/urban/electric1.jpg"
 texture 0 "./wotwot/urban/electric1_bla.jpg"
-texture 0 "wotwot/skin/drainpipe.jpg"
-texture 0 "wotwot/skin/milkcarton.jpg"
-texture 0 "wotwot/skin/guardrail2.jpg"
-texture 0 "wotwot/skin/monitor.jpg"
-texture 0 "wotwot/skin/commrack.jpg"
+texture 0 "./wotwot/skin/drainpipe.jpg"
+texture 0 "./wotwot/skin/milkcarton.jpg"
+texture 0 "./wotwot/skin/guardrail2.jpg"
+texture 0 "./wotwot/skin/monitor.jpg"
+texture 0 "./wotwot/skin/commrack.jpg"
