--- a/ac/packages/maps/ac_snow.cfg
+++ b/ac/packages/maps/ac_snow.cfg
@@ -9,7 +9,7 @@ mapmodel 0 11 0 0 "ladder_11x"
 mapmodel 0 15 0 0 "ladder_15x"
 mapmodel 0 12 0 0 "streetlamp"
 mapmodel 0 12 0 0 "streetlamp"
-mapmodel 3  2 0 0 "bench"
+mapmodel 3 2 0 0 "bench"
 mapmodel 2 4 0 0 "dumpster"
 mapmodel 0 0 0 0 "roadblock01"
 mapmodel 0 0 0 0 "roadblock02"
@@ -129,7 +129,7 @@ texture 0 "./noctua/stone/stone19.jpg"
 texture 0 "./noctua/stone/stone19.jpg"
 texture 0 "./boeck/gully.jpg"
 texture 0 "./makke/aircon.jpg"
-texture 0 "./makke/aircon_sm.jpg"     //100
+texture 0 "./makke/aircon_sm.jpg"
 texture 0 "./makke/door.jpg"
 texture 0 "./makke/klappe.jpg"
 texture 0 "./makke/klappe2.jpg"
