--- a/ac/packages/maps/ac_toxic.cfg
+++ b/ac/packages/maps/ac_toxic.cfg
@@ -1,78 +1,82 @@
-// ac_toxic - Copyright, RandumIdiot 2007.
+// Toxicity - By RandumIdiot
+// Toxicity is licensed under "Attribution-Noncommercial-No Derivative Works 3.0 Unported" creative commons.
+// http://creativecommons.org/licenses/by-nc-nd/3.0/
+// Attribution is not needed if distributed as part of the AssaultCube package, as credit is already given.
+// Exceptions to this license may be made if written permission is given by myself.
 // This map is very "Hit & Run" like. So, be strategic, and on your best guard.
 shadowyaw 165
-fog 1024			 
-mapmodelreset  
-mapmodel 1 30 0 0 "nothing"		 
-mapmodel 4 1 0 0 "bridge"		 
-mapmodel 0 0 0 0 "ladder_7x"		 
-mapmodel 0 0 0 0 "ladder_8x"		 
-mapmodel 0 0 0 0 "ladder_10x"		 
-mapmodel 0 0 0 0 "ladder_11x"		 
-mapmodel 0 0 0 0 "ladder_15x"		 
-mapmodel 0 12 0 0 "streetlamp"		 
-mapmodel 0 12 0 0 "streetlamp"		 
-mapmodel 3 2 0 0 "bench"		 
-mapmodel 2 4 0 0 "dumpster"		 
-mapmodel 0 0 0 0 "roadblock01"		 
-mapmodel 0 0 0 0 "roadblock02"		 
-mapmodel 0 0 0 0 "fence"		 
-mapmodel 0 0 0 0 "fencepost"		 
-mapmodel 0 0 0 0 "fencegate_open"	 
-mapmodel 0 0 0 0 "fencegate_closed" 
-mapmodel 0 0 0 0 "grass01"		 
-mapmodel 0 0 0 0 "grass01_d"		 
-mapmodel 0 0 0 0 "grass01_s"		 
-mapmodel 0 0 0 0 "grass02"		 
-mapmodel 0 0 0 0 "grass02_d"		 
-mapmodel 0 0 0 0 "grass02_s"		 
-mapmodel 0 0 0 0 "plant01"		 
-mapmodel 0 0 0 0 "plant01_d"		 
-mapmodel 0 0 0 0 "plant01_s"		 
-mapmodel 0 0 0 0 "tree01"		 
-mapmodel 1 2 0 0 "chair1"		 
-mapmodel 0 0 0 0 "laptop1"		 
-mapmodel 0 0 0 0 "picture1"		 
-mapmodel 1 30 0 0 "locker"		 
-mapmodel 0 0 0 0 "strahler" 
-mapmodel 0 0 0 0 "light01"		 
-mapmodel 0 0 0 0 "bulb"			 
-mapmodel 1 3 0 0 "barrel"		 
-mapmodel 1 2 0 0 "barrel2"		 
-mapmodel 0 0 0 0 "elektro"		 
-mapmodel 3 1 0 0 "europalette"		 
-mapmodel 0 0 0 0 "gastank"		 
-mapmodel 0 0 0 0 "gutter_h"		 
-mapmodel 0 0 0 0 "gutter_v"		 
-mapmodel 0 0 0 0 "wrench"		 
-mapmodel 0 0 0 0 "screw"		 
-mapmodel 0 0 0 0 "signs/flammable"	 
-mapmodel 0 0 0 0 "signs/speed"		 
-mapmodel 0 0 0 0 "signs/maint"		 
-mapmodel 0 0 0 0 "signs/caution"	 
-mapmodel 0 0 0 0 "signs/biohazard"	 
-mapmodel 0 0 0 0 "fag"			 
-mapmodel 0 0 0 0 "can"			 
-mapmodel 0 0 0 0 "can2"			 
-mapmodel 0 0 0 0 "wood01"		 
-mapmodel 0 0 0 0 "hook"			 
-mapmodel 0 0 0 0 "coffeemug"		 
-mapmodel 0 0 0 0 "flyer"		 
-mapmodel 0 0 0 0 "poster"		 
-mapmodel 1 1 0 0 "aard"			 
-mapmodel 0 8 0 0 "nothing"		 
-mapmodel 4 1 0 0 "comp_bridge"		 
-mapmodel 1 3 0 0 "toca/wheel"		 
-mapmodel 2 1 0 0 "toca/tyre"		 
-mapmodel 1 3 0 0 "toca/trashcan"	 
-mapmodel 1 2 0 0 "toca/trashbag"	 
-mapmodel 0 1 0 0 "toca/cinderblock"	 
-mapmodel 1 3 0 0 "barrel-toxic"		 
-mapmodel 0 7 0 0 "ladder_7x"		 
-mapmodel 0 8 0 0 "ladder_8x"		  
-loadsky "textures/skymaps/steini/steini4" 
-texturereset    
-texture 0 "./kurt/klite1.jpg"  
+fog 1024
+mapmodelreset
+mapmodel 1 30 0 0 "nothing"
+mapmodel 4 1 0 0 "bridge"
+mapmodel 0 0 0 0 "ladder_7x"
+mapmodel 0 0 0 0 "ladder_8x"
+mapmodel 0 0 0 0 "ladder_10x"
+mapmodel 0 0 0 0 "ladder_11x"
+mapmodel 0 0 0 0 "ladder_15x"
+mapmodel 0 12 0 0 "streetlamp"
+mapmodel 0 12 0 0 "streetlamp"
+mapmodel 3 2 0 0 "bench"
+mapmodel 2 4 0 0 "dumpster"
+mapmodel 0 0 0 0 "roadblock01"
+mapmodel 0 0 0 0 "roadblock02"
+mapmodel 0 0 0 0 "fence"
+mapmodel 0 0 0 0 "fencepost"
+mapmodel 0 0 0 0 "fencegate_open"
+mapmodel 0 0 0 0 "fencegate_closed"
+mapmodel 0 0 0 0 "grass01"
+mapmodel 0 0 0 0 "grass01_d"
+mapmodel 0 0 0 0 "grass01_s"
+mapmodel 0 0 0 0 "grass02"
+mapmodel 0 0 0 0 "grass02_d"
+mapmodel 0 0 0 0 "grass02_s"
+mapmodel 0 0 0 0 "plant01"
+mapmodel 0 0 0 0 "plant01_d"
+mapmodel 0 0 0 0 "plant01_s"
+mapmodel 0 0 0 0 "tree01"
+mapmodel 1 2 0 0 "chair1"
+mapmodel 0 0 0 0 "laptop1"
+mapmodel 0 0 0 0 "picture1"
+mapmodel 1 30 0 0 "locker"
+mapmodel 0 0 0 0 "strahler"
+mapmodel 0 0 0 0 "light01"
+mapmodel 0 0 0 0 "bulb"
+mapmodel 1 3 0 0 "barrel"
+mapmodel 1 2 0 0 "barrel2"
+mapmodel 0 0 0 0 "elektro"
+mapmodel 3 1 0 0 "europalette"
+mapmodel 0 0 0 0 "gastank"
+mapmodel 0 0 0 0 "gutter_h"
+mapmodel 0 0 0 0 "gutter_v"
+mapmodel 0 0 0 0 "wrench"
+mapmodel 0 0 0 0 "screw"
+mapmodel 0 0 0 0 "signs/flammable"
+mapmodel 0 0 0 0 "signs/speed"
+mapmodel 0 0 0 0 "signs/maint"
+mapmodel 0 0 0 0 "signs/caution"
+mapmodel 0 0 0 0 "signs/biohazard"
+mapmodel 0 0 0 0 "fag"
+mapmodel 0 0 0 0 "can"
+mapmodel 0 0 0 0 "can2"
+mapmodel 0 0 0 0 "wood01"
+mapmodel 0 0 0 0 "hook"
+mapmodel 0 0 0 0 "coffeemug"
+mapmodel 0 0 0 0 "flyer"
+mapmodel 0 0 0 0 "poster"
+mapmodel 1 1 0 0 "aard"
+mapmodel 0 8 0 0 "nothing"
+mapmodel 4 1 0 0 "comp_bridge"
+mapmodel 1 3 0 0 "toca/wheel"
+mapmodel 2 1 0 0 "toca/tyre"
+mapmodel 1 3 0 0 "toca/trashcan"
+mapmodel 1 2 0 0 "toca/trashbag"
+mapmodel 0 1 0 0 "toca/cinderblock"
+mapmodel 1 3 0 0 "barrel-toxic"
+mapmodel 0 7 0 0 "ladder_7x"
+mapmodel 0 8 0 0 "ladder_8x"
+loadsky "textures/skymaps/steini/steini4"
+texturereset
+texture 0 "./kurt/klite1.jpg"
 texture 0 "./makke/black.jpg"
 texture 0 "./arcitool/archibrick01.jpg"
 texture 0 "./arcitool/archibrick02.jpg"
@@ -203,8 +207,8 @@ texture 0 "./noctua/wood/wood02.jpg"
 texture 0 "./noctua/wood/wood03.jpg"
 texture 0 "./noctua/wood/wood04.jpg"
 texture 0 "./mitaman/various/063bois.jpg"
-texture 0 "./mitaman/various/063bois_b.jpg" 
-texture 0 "./craig_fortune/terrain/grass_lush1.jpg"  
+texture 0 "./mitaman/various/063bois_b.jpg"
+texture 0 "./craig_fortune/terrain/grass_lush1.jpg"
 texture 0 "./craig_fortune/terrain/Grass_mossy.jpg"
 texture 0 "./craig_fortune/terrain/Grass_parched.jpg"
 texture 0 "./arcitool/Wiese3.jpg"
@@ -213,7 +217,7 @@ texture 0 "./craig_fortune/terrain/Grass_lush.jpg"
 texture 0 "./craig_fortune/terrain/mud.jpg"
 texture 0 "./craig_fortune/terrain/Mud_thick.jpg"
 texture 0 "./makke/cracked_mud.jpg"
-texture 0 "./craig_fortune/terrain/sand_bleached.jpg" //50
+texture 0 "./craig_fortune/terrain/sand_bleached.jpg"
 texture 0 "./sub/sub_sand.jpg"
 texture 0 "./DigitalFlux/light_brown_dirt_02.jpg"
 texture 0 "./DigitalFlux/dirt_pebbles_01.jpg"
@@ -223,17 +227,17 @@ texture 0 "./DigitalFlux/reddish_brown_dirt_02.jpg"
 texture 0 "./makke/dirt_01.jpg"
 texture 0 "./makke/stuck1.jpg"
 texture 0 "./noctua/ground/mud01.jpg"
-texture 0 "./noctua/ground/pebble01.jpg"  
+texture 0 "./noctua/ground/pebble01.jpg"
 texture 0 "./noctua/ground/ground02.jpg"
-texture 0 "./noctua/ground/ground06.jpg"   
-texture 0 "./arcitool/schotter1.jpg"  
+texture 0 "./noctua/ground/ground06.jpg"
+texture 0 "./arcitool/schotter1.jpg"
 texture 0 "./arcitool/schotter2.jpg"
 texture 0 "./craig_fortune/terrain/Rock_cracked.jpg"
 texture 0 "./craig_fortune/terrain/rubble.jpg"
 texture 0 "./craig_fortune/terrain/Rock_rubble.jpg"
 texture 0 "./noctua/ground/snowy01.jpg"
 texture 0 "./makke/rock.jpg"
-texture 0 "./noctua/stone/stone18.jpg"  
+texture 0 "./noctua/stone/stone18.jpg"
 texture 0 "./noctua/stone/stone02.jpg"
 texture 0 "./noctua/stone/stone03.jpg"
 texture 0 "./noctua/stone/stone04.jpg"
@@ -243,7 +247,7 @@ texture 0 "./noctua/stone/stone07.jpg"
 texture 0 "./noctua/stone/stone08.jpg"
 texture 0 "./noctua/stone/stone09.jpg"
 texture 0 "./noctua/stone/stone12.jpg"
-texture 0 "./noctua/stone/stone13.jpg"  
+texture 0 "./noctua/stone/stone13.jpg"
 texture 0 "./noctua/stone/stone15.jpg"
 texture 0 "./noctua/stone/stone16.jpg"
 texture 0 "./noctua/stone/stone17.jpg"
@@ -251,19 +255,19 @@ texture 0 "./noctua/stone/marmor01.jpg"
 texture 0 "./noctua/stone/stone19.jpg"
 texture 0 "./noctua/wall/conc03.jpg"
 texture 0 "./noctua/wall/conc04.jpg"
-texture 0 "./noctua/wall/d_wall01.jpg"   
-texture 0 "./noctua/textile/carpet04.jpg"   
-texture 0 "./noctua/textile/carpet01.jpg"  
+texture 0 "./noctua/wall/d_wall01.jpg"
+texture 0 "./noctua/textile/carpet04.jpg"
+texture 0 "./noctua/textile/carpet01.jpg"
 texture 0 "./noctua/textile/carpet02.jpg"
 texture 0 "./noctua/textile/carpet03.jpg"
 texture 0 "./noctua/textile/burlap01.jpg"
-texture 0 "./noctua/textile/carpet05.jpg"   
-texture 0 "./arcitool/Wellblech1-1.jpg"   
+texture 0 "./noctua/textile/carpet05.jpg"
+texture 0 "./arcitool/Wellblech1-1.jpg"
 texture 0 "./arcitool/Glasbausteine.jpg"
 texture 0 "./boeck/gully.jpg"
 texture 0 "./boeck/aircon2.jpg"
 texture 0 "./makke/aircon.jpg"
-texture 0 "./makke/aircon_sm.jpg"      
+texture 0 "./makke/aircon_sm.jpg"
 texture 0 "./makke/door.jpg"
 texture 0 "./makke/klappe.jpg"
 texture 0 "./makke/klappe2.jpg"
@@ -288,7 +292,7 @@ texture 0 "./makke/metalstair1.jpg"
 texture 0 "./makke/metalstair2.jpg"
 texture 0 "./mitaman/zastrow/metal_siding_kinksb.jpg"
 texture 0 "./makke/window.jpg"
-texture 0 "./makke/windows.jpg"     
+texture 0 "./makke/windows.jpg"
 texture 0 "./mitaman/zastrow/sub_window31.jpg"
 texture 0 "./mitaman/zastrow/sub_window33.jpg"
 texture 0 "./mitaman/various/sub_window23.jpg"
@@ -301,7 +305,7 @@ texture 0 "./mitaman/zastrow/sub_doors512B05.jpg"
 texture 0 "./mitaman/zastrow/sub_doors512A10.jpg"
 texture 0 "./mitaman/zastrow/sub_doors512A16.jpg"
 texture 0 "./mitaman/various/sub_doors256nf_01.jpg"
-texture 0 "./mitaman/3dcafe/objects08.jpg" 
+texture 0 "./mitaman/3dcafe/objects08.jpg"
 texture 0 "./craig_fortune/crates/light_weathered.jpg"
 texture 0 "./craig_fortune/crates/light.jpg"
 texture 0 "./zastrow/3wood_crate_03.jpg"
@@ -318,5 +322,5 @@ texture 0 "./zastrow/wood_crate_10.jpg"
 texture 0 "./zastrow/wood_crate_12.jpg"
 texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
-texture 0 "./makke/box_3.jpg"       
-texture 0 "./wotwot/urban/manhole1.jpg"  
+texture 0 "./makke/box_3.jpg"
+texture 0 "./wotwot/urban/manhole1.jpg"
