Added: top fence barbwire model
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2805 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -121,7 +121,7 @@ mapmodel 1 5 0 0 "toca/signs/target"		//89
 mapmodel 0 0 0 0 "toca/signs/toxic"		//90
 mapmodel 0 0 0 0 "toca/signs/radioactive"	//91
 mapmodel 0 0 0 0 "toca/signs/biohazard"		//92
-mapmodel 0 0 0 0 "toca/signs/resticted"		//93
+mapmodel 0 0 0 0 "toca/signs/restricted"	//93
 mapmodel 0 0 0 0 "toca/signs/firstaid"		//94
 mapmodel 0 0 0 0 "toca/signs/noentry"		//95
 mapmodel 0 0 0 0 "toca/signs/nosmoking"		//96
@@ -169,7 +169,7 @@ mapmodel 0 0 0 0  "toca/backdrop2"		//134
 mapmodel 0 0 0 0  "toca/backdrop3"		//135
 
 mapmodel 0 0 0 0  "toca/window1"		//136
-
+mapmodel 0 0 0 0  "toca/barbwire"		//137
 
 
 
