added installer files to vcpp proj
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2814 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/vcpp/cube.vcproj
+++ b/ac/source/vcpp/cube.vcproj
@@ -2197,6 +2197,18 @@
 				</FileConfiguration>
 			</File>
 		</Filter>
+		<Filter
+			Name="installer"
+			>
+			<File
+				RelativePath=".\buildEnv\ac.nsi"
+				>
+			</File>
+			<File
+				RelativePath=".\buildEnv\License.txt"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
