reset gamemode after botmatch
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2837 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -36,6 +36,7 @@ alias preparebotmatch [
     alias mapstartonce [ 
         kickallbots
         startbotmatch // add bots
+        mode 0 // reset mode for next maps
     ]
     
 	mode $tmp_mode
@@ -56,7 +57,8 @@ alias startbotmap [
 alias emptymap [ if $connected [ disconnect; alias mapstartonce [ emptymap2 ] ] [ emptymap2 ] ]
 alias emptymap2 [
 	mode 0
-	showmenu maps ]
+	showmenu maps 
+]
 
 newmenu singleplayer
 
