--- a/ac/packages/maps/ac_sunset.cfg
+++ b/ac/packages/maps/ac_sunset.cfg
@@ -64,7 +64,7 @@ mapmodel 0 10 0 0 "nothing"
 mapmodel 0 0 0 0 "gutter_v"
 loadsky "textures/skymaps/ladynighthawk/inhcanyons1"
 texturereset
-texture 0 "./urt/klite1.jpg"
+texture 0 "./kurt/klite1.jpg"
 texture 0 "./makke/black.jpg"
 texture 0 "./arcitool/archibrick01.jpg"
 texture 0 "./arcitool/archibrick02.jpg"
