--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -9,7 +9,7 @@ menuitem "Demo"				"showmenu demo"
 menuitem "Editing" 			"showmenu editing"
 menuitem "Help"				"showmenu help"
 menuitem "About"			"showmenu about"
-menuitem "Quit"				"quit"
+menuitem "Quit"				"showmenu quit"
 
 
 // Start maps.
@@ -148,6 +148,10 @@ menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe, Kurt Keslar, John Solo.
 menuitem "" ""
 menuitem "Also thanks to kurtis84, player1, quase, exis, talou and others for testing." ""
 menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Release Cup." ""
+
+newmenu quit
+menuitem "Yes, quit AssaultCube now.." "quit"
+menuitem "No! I must keep playing.." "quit"
 
 
 // create additional menus
